使用新的语言包

--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -27,6 +27,8 @@
   <string name="AT_HOME">Di rumah</string>
   <string name="AUDIBLE_ALERT">Pilih sebuah sinyal Audio untuk diputar ketika sensor gerakan terdeteksi</string>
   <string name="Added_successfully">Bind berhasil</string>
+  <string name="Apr">Apr.</string>
+  <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
   <string name="BARKING">Menggonggong</string>
   <string name="BATTERY_LEVEL">Pemakaian Baterai</string>
@@ -37,7 +39,7 @@
   <string name="BLUE_BLINKING">Pastikan lampu indikator WiFi berkedip biru . Jika tidak , silahkan tekan tombol di logo WiFi yang ada di kamera selama 3 detik .</string>
   <string name="Button_Add">Menambah</string>
   <string name="Button_No">Tidak</string>
-  <string name="Button_ReObtain">Mengirim ulang</string>
+  <string name="Button_ReObtain">Re&#8211;send</string>
   <string name="Button_Sure">Yakin</string>
   <string name="Button_Yes">Ya</string>
   <string name="CALL_CAMERA_NAME">Bell pintu</string>
@@ -129,15 +131,16 @@
   <string name="DOOR_SLIDE_TIP">Geser untuk menjawab</string>
   <string name="DOOR_STOPPED">Putuskan</string>
   <string name="DOOR_TALK">Speaker</string>
-  <string name="TODAY">Hari ini</string>
-  <string name="DOOR_UNBIND">Sudah menghapus perangkat</string>
+  <string name="DOOR_TODAY">Hari ini</string>
   <string name="DOOR_UNCALL">Terjawab</string>
   <string name="DOOR_VOICE">Suara</string>
   <string name="DOOR_WIFI_HINT">Status Indikator LED</string>
+  <string name="DailyGreatTips_Full">Nomor koleksi untuk Daily Great telah mencapai batas atas 50, pergi ke menghapus?</string>
+  <string name="Dec">Dec.</string>
   <string name="EDIT_IMAGE">Ubah</string>
   <string name="EDIT_THEME">Ubah</string>
   <string name="EFAMILY_BIND_SUCC">Berhasil ditambahkan</string>
-  <string name="ANSWER">Jawab</string>
+  <string name="EFAMILY_CALL_ANSWER">Jawab</string>
   <string name="EFAMILY_CALL_BUSY">Sibuk</string>
   <string name="EFAMILY_CALL_CANCEL">Dibatalkan</string>
   <string name="EFAMILY_CALL_DURATION">Durasi</string>
@@ -147,7 +150,7 @@
   <string name="EFAMILY_CANCEL_RECORD">Pindahkan ke atas untuk membatalkan</string>
   <string name="EFAMILY_CANCEL_SEND">Lepas untuk membatalkan</string>
   <string name="EFAMILY_CLEAR_MSGLIST">Hapus daftar pesan</string>
-  <string name="IGNORE">Abaikan</string>
+  <string name="EFAMILY_IGNORE">Abaikan</string>
   <string name="EFAMILY_INVALID_DEVICE">Kode QR tidak valid</string>
   <string name="EFAMILY_LOOK">Lihat</string>
   <string name="EFAMILY_MENU_PHOTO">Foto&#8211;foto</string>
@@ -198,17 +201,20 @@
   <string name="FRI_1">Jumat</string>
   <string name="FRI_2">Jumat</string>
   <string name="FROME">Dari</string>
+  <string name="Feb">Feb.</string>
   <string name="GENERAL">Umum</string>
   <string name="GET_CODE">Mendapatkan</string>
   <string name="GIVE_UP">Keluar</string>
   <string name="GLOBAL_NO_CONTENTS">Tidak ada konten</string>
   <string name="GLOBAL_NO_NETWORK">Tidak terhubung ke jaringan</string>
   <string name="GUIDE_INFO">Sedang menggeser. \nperlihatkan lebih lanjut</string>
+  <string name="GetCode_FrequentlyTips">Terlalu sering operasi, coba lagi 10 menit kemudian.</string>
+  <string name="GetWifiList_FaiTips">1.Memungkinkan aplikasi untuk mendapatkan \"Lokasi\" izin \n 2.Hidupkan \"GPS\" atas.</string>
   <string name="HOME">Rumah</string>
   <string name="HOUR">Jam</string>
   <string name="HOURS">24 jam</string>
   <string name="HZ_VOTE">Daya Listrik 110V</string>
-
+  <string name="IGNORE">Mengabaikan</string>
   <string name="IMAGE_ERR">Upload gagal, gambar terlalu besar</string>
   <string name="INVALID_ACCOUNT">Akun salah</string>
   <string name="INVALID_CODE">Kode salah</string>
@@ -219,6 +225,9 @@
   <string name="Item_LoadFail">Gagal memuat</string>
   <string name="Item_NoContents">Tidak ada konten</string>
   <string name="JUST_NOW">Baru saja</string>
+  <string name="Jan">Jan.</string>
+  <string name="Jul">Jul.</string>
+  <string name="Jun">Jun.</string>
   <string name="LARGER_IMAGE">Lihat gambar besar</string>
   <string name="LAST_UPDATE">Pembaharuan Terakhir</string>
   <string name="LED">Lampu indikator perangkat</string>
@@ -274,7 +283,6 @@
   <string name="MSG_SHARE">Berbagi kepada %s</string>
   <string name="MSG_SYSTEM_UPGRADE">Keren abis! Upgrade sistem untuk V%s</string>
   <string name="MSG_UNBIND">Perangkat telah dihapus</string>
-  <string name="MSG_UNBIND_INFO">Perangkat telah dihapus</string>
   <string name="MSG_UNSHARE">Hapus berbagi dari %s</string>
   <string name="MSG_VIDEO">Video</string>
   <string name="MSG_WARNING">Penemuan Baru</string>
@@ -282,6 +290,8 @@
   <string name="MSG_WARN_ON">Anda telah membuka deteksi gerakan . Perangkat akan memberitahu anda segera ketika sesuatu bergerak</string>
   <string name="MUTE">Diam</string>
   <string name="MY_HOME">Rumah saya</string>
+  <string name="Mar">Mar.</string>
+  <string name="May">May.</string>
   <string name="NAME">Nama</string>
   <string name="NETWORK">Jaringan</string>
   <string name="NETWORK_1">Seluler</string>
@@ -305,6 +315,8 @@
   <string name="NO_NETWORK_DOOR">Tidak terhubung ke jaringan</string>
   <string name="NO_SDCARD">Tidak ada Kartu Micro SD</string>
   <string name="NO_SET">Tidak terdefinisi</string>
+  <string name="NoNetworkTips">Tidak koneksi jaringan</string>
+  <string name="Nov">Nov.</string>
   <string name="OFF">Mati</string>
   <string name="OFFLINE_ERR">Device sedang off&#8211;line</string>
   <string name="OFFLINE_ERR_1">Tidak terhubung ke Internet</string>
@@ -317,6 +329,7 @@
   <string name="OTHERS_LOOKING">Seseorang sedang melihat video langsung</string>
   <string name="OTHER_TIME">Lainnya</string>
   <string name="OUT_OF_HOME">Keluar dari rumah</string>
+  <string name="Oct">Oct.</string>
   <string name="PASSWORD">Kata Sandi</string>
   <string name="PASSWORD_BIT">Kata sandi baru</string>
   <string name="PASSWORD_LESSTHAN_SIX">Silahkan masukkan lebih dari 6 digit</string>
@@ -491,6 +504,8 @@
   <string name="Sdcard_AvailableCapacity">Tersedia</string>
   <string name="Sdcard_TotalCapacity">Total</string>
   <string name="Search">Mencari</string>
+  <string name="Sep">Sep.</string>
+  <string name="ShareTo">Share to %s</string>
   <string name="Slogan">Homesick, Use Clever Dog</string>
   <string name="Slogan_Zhongxing">Smart Home, for better life</string>
   <string name="TAKE_PHOTO">Ambil Foto</string>
@@ -511,15 +526,24 @@
   <string name="TUE_1">Selasa</string>
   <string name="TUE_2">Selasa</string>
   <string name="TURN_ON_PROTECTION">Saat perlindungan keamanan menyala, sensor gerakan akan menyala secara otomatis, dan akan mengirim sinyal peringatan menurut pengaturan jarak waktu.</string>
+  <string name="Tap0_AlreadyEmailed">Sudah email ke</string>
   <string name="Tap0_Authorizationfailed">Otorisasi gagal, silahkan coba lagi</string>
   <string name="Tap0_BindEmail">Menyambung E&#8211;mail</string>
   <string name="Tap0_BindPhoneNo">Menyambung ponsel</string>
   <string name="Tap0_BindTips">Sambung untuk login atau mendapatkan kembali kata sandi</string>
+  <string name="Tap0_Click_ActivateAccount">silakan klik link untuk mengaktifkan account Anda.</string>
+  <string name="Tap0_Click_ResetPassword">silakan klik link dalam email untuk mereset password</string>
+  <string name="Tap0_Login_NoInstalled">Tidak ada %s terpasang</string>
   <string name="Tap0_Register_VerificationCode">Masukkan kode verifikasi</string>
   <string name="Tap0_WelcomeTourist">Lihatlah</string>
   <string name="Tap0_enterphoneoremail">Masukkan nomor ponsel atau alamat E&#8211;mail</string>
   <string name="Tap0_invaildcode">Kode tidak valid</string>
   <string name="Tap0_register">Daftar</string>
+  <string name="Tap0_register_EmailVerification">Verifikasi email</string>
+  <string name="Tap0_register_GoToLogin">Masuk</string>
+  <string name="Tap0_register_SendEmail">Kirim lagi</string>
+  <string name="Tap0_register_SendEmailTips">Email telah dikirim</string>
+  <string name="Tap0_register_VerificationTips">Mail aktivasi telah dikirim ke %s, silakan klik link untuk mengaktifkan account Anda.</string>
   <string name="Tap0_wrongcode">Error</string>
   <string name="Tap1_AddDeviceTips">Tekan\"+\"untuk menambahkan perangkat</string>
   <string name="Tap1_AddDevice_CameraTips">Tunggu indikator berkedip biru</string>
@@ -557,7 +581,7 @@
   <string name="Tap1_CameraFun_Timelapse_NotStart">Akan dimulai</string>
   <string name="Tap1_CameraFun_Timelapse_OnTips">Fotografi selang waktu akan dimatikan otomatis saat selesai merekam dan disimpan dalam\"Daily Great\"</string>
   <string name="Tap1_CameraFun_Timelapse_RecordTime">Lama rekaman</string>
-  <string name="Tap1_CameraFun_Timelapse_Setting">Mengambil sekali lagi</string>
+  <string name="Tap1_CameraFun_Timelapse_Setting">Menembak</string>
   <string name="Tap1_CameraFun_Timelapse_StandbyTips">Mulai fotografi selang waktu sebelum standby</string>
   <string name="Tap1_CameraFun_Timelapse_Start">Mulai sekarang</string>
   <string name="Tap1_CameraFun_Timelapse_StartTime">Waktu mulai</string>
@@ -581,9 +605,11 @@
   <string name="Tap1_Camera_NoSDCardTips">No SD card detected</string>
   <string name="Tap1_Camera_Overlook">Overlook</string>
   <string name="Tap1_Camera_OverlookTips">Melihat dengan sudut menghadap perlu menempatkan kamera pada tinggi</string>
+  <string name="Tap1_Camera_OverlookTips_View">Overlook:Melihat dengan sudut menghadap perlu menempatkan kamera pada tinggi</string>
   <string name="Tap1_Camera_Playback">Sedang merekam</string>
   <string name="Tap1_Camera_Record_EndTips">Tamat</string>
   <string name="Tap1_Camera_SetProtectionTips">Mengatur Perlindungan</string>
+  <string name="Tap1_Camera_SpaceUsage">Penggunaan ruang(%1$s/%2$s)</string>
   <string name="Tap1_Camera_Video">Video</string>
   <string name="Tap1_Camera_VideoLive">Live</string>
   <string name="Tap1_Camera_Video_DormantTips">Sedang standby, klik untuk matikan</string>
@@ -591,17 +617,29 @@
   <string name="Tap1_Camera_Video_Standby">Sedang standby</string>
   <string name="Tap1_Camera_Video_Standby_OffTips">Klik untuk matikan</string>
   <string name="Tap1_Camera_ViewAngle">Lihat sudut</string>
+  <string name="Tap1_CurrentVersion">Versi sekarang</string>
   <string name="Tap1_Device_NoConnection">Ada koneksi jaringan, klik Refresh</string>
   <string name="Tap1_Device_UpgradeTips">Cari firmware baru perangkat, untuk memperbarui atau tidak?</string>
   <string name="Tap1_DoorFun_VoiceTips">Suara akan keluar dari receiver</string>
   <string name="Tap1_DoorFun_Waitting">Sedang menunggu&#8230;</string>
+  <string name="Tap1_DownloadFirmwareFai">Download firmware gagal</string>
+  <string name="Tap1_DownloadFirmwareTips">Ambil akan segera memulai,pastikan bahwa ponsel dan perangkat terhubung dengan WIFI yang sama</string>
+  <string name="Tap1_FirmwareDownloading">Downloading(%s)</string>
+  <string name="Tap1_FirmwareUpdate">Firmware update</string>
+  <string name="Tap1_FirmwareUpdateFai">mengupdate gagal</string>
+  <string name="Tap1_FirmwareUpdateSuc">mengupdate berhasil</string>
+  <string name="Tap1_FirmwareUpdating">Memutakhirkan(%s)</string>
+  <string name="Tap1_Firmware_DataTips">konsumsi data akan dibuat jika pergi tanpa koneksi WIFI,terus?</string>
   <string name="Tap1_Index_DayGreetings">Sedikit kejutan setiap hari</string>
   <string name="Tap1_Index_NightGreetings">Istirahat dan ulang lagi</string>
   <string name="Tap1_Index_NoDevice">Tidak ada perangkat</string>
   <string name="Tap1_Index_Tips_Newvisitor">pengunjung baru</string>
   <string name="Tap1_Index_Tips_Newvoice">Pesan suara baru</string>
+  <string name="Tap1_LatestFirmwareTips">Itu adalah versi terkini</string>
+  <string name="Tap1_LatestVersion">Latest version</string>
   <string name="Tap1_Magnetism_ClearRecord">Hapus catatan</string>
-  <string name="Tap1_Magnetism_Setting_Notify">Beritahu saya jika itu terbuka / tertutup</string>
+  <string name="Tap1_Magnetism_Setting_Notify">Beritahu saya jika itu terbuka/tertutup</string>
+  <string name="Tap1_NewFirmware">Firmware baru</string>
   <string name="Tap1_NoMessages">Tidak ada pesan</string>
   <string name="Tap1_SelectDevice">Pilih perangkat</string>
   <string name="Tap1_Setting_Cid">CID jumlah</string>
@@ -610,23 +648,26 @@
   <string name="Tap1_Tipsforclearrecents">Hapus semua yang baru&#8211;baru</string>
   <string name="Tap1_TitleName">Rumah</string>
   <string name="Tap1_Tosetup">Persiapkan</string>
+  <string name="Tap1_Update">Memperbarui</string>
   <string name="Tap1_device_deleted">Perangkat ini sudah dihapus</string>
   <string name="Tap1_iHome_Associate">Tautan</string>
   <string name="Tap1_iHome_Associated">Associated</string>
-  <string name="Tap1_iHome_CallDuration">Durasi panggilan:%s</string>
+  <string name="Tap1_iHome_CallDuration">Durasi panggilan:%d</string>
   <string name="Tap1_iHome_ClearRecord">Hapus catatan</string>
   <string name="Tap1_iHome_NotAssociated">Not Associated</string>
   <string name="Tap1_iHome_disassociate">Membatalkan tautan</string>
   <string name="Tap1_shareDevice_canceledshare">Perangkat ini batal membagikan</string>
   <string name="Tap1_share_tips">Mengundang anda menjadi temanku dan klik %s untuk unduh dan pasang aplikasi Cleverdog</string>
+  <string name="Tap1a_DownloadInstall">Unduh dan pasang(%s)</string>
   <string name="Tap2_Index_DemoVideo">Demo video</string>
   <string name="Tap2_Index_Greetings">Rekam setiap hari</string>
   <string name="Tap2_Index_No3GCameraTips">Hanya mendukung 3G kamera</string>
   <string name="Tap2_Index_OpenTimelapse">Mulai sekarang</string>
   <string name="Tap2_Index_Open_NoDevice">Untuk memulai fungsi ini perlu perangkat untuk disambungkan , sambungkan?</string>
   <string name="Tap2_Index_Open_NoDeviceOption">Iya</string>
-  <string name="Tap2_Share_Moments">Lingkaran teman&#8211;teman Wechat</string>
-  <string name="Tap2_Share_Wechat">Teman&#8211;teman Wechat</string>
+  <string name="Tap2_NoPermissions_FailedDownloadTips">Gagal mendapatkan izin kartu SD.Download dibatalkan</string>
+  <string name="Tap2_Share_Moments">Moments</string>
+  <string name="Tap2_Share_Wechat">Wechat</string>
   <string name="Tap2_Timelapse_Alarmimages">Gambar alarm</string>
   <string name="Tap2_Timelapse_fail">File video tidak dapat dihasilkan untuk pemutusan ketika fotografi selang waktu</string>
   <string name="Tap2_Timelapse_screenshot">Tangkap layar Live</string>
@@ -645,8 +686,9 @@
   <string name="Tap3_Feedback_AutoTips">Kritik dan saran anda didengarkan</string>
   <string name="Tap3_Feedback_Clear">Hapus</string>
   <string name="Tap3_Feedback_ClearTips">pesan nyata yang?</string>
+  <string name="Tap3_Feedback_Resend">Mengirim ulang?</string>
   <string name="Tap3_Feedback_TextFail">Tidak kurang dari 10 karakter</string>
-  <string name="Tap3_Feedback_TextTips">Silahkan jelaskan masalah , komentar, dan saran anda</string>
+  <string name="Tap3_Feedback_TextTips">Jelaskan masalah Anda</string>
   <string name="Tap3_Friends">Teman</string>
   <string name="Tap3_FriendsAdd">Tambah teman</string>
   <string name="Tap3_FriendsAdd_Agree">Setuju</string>
@@ -687,6 +729,7 @@
   <string name="Tap3_LogIn">Masuk</string>
   <string name="Tap3_MessageCancel">Dibatalkan</string>
   <string name="Tap3_MyQRCode">Saya QR code</string>
+  <string name="Tap3_NoPermissions_FailedViewImages">App memerlukan izin Storage untuk melihat gambar</string>
   <string name="Tap3_SavePic">Simpan Pics</string>
   <string name="Tap3_Setting_taptoload">Tekan untuk memuat kembali</string>
   <string name="Tap3_ShareDevice">Bagikan perangkat</string>
@@ -701,7 +744,7 @@
   <string name="Tap3_ShareDevice_ExceedTips">Maksimum bagikan ke 5 orang</string>
   <string name="Tap3_ShareDevice_FailTips">Gagal berbagi</string>
   <string name="Tap3_ShareDevice_Friends">Berbagi dengan teman</string>
-  <string name="Tap3_ShareDevice_Friends_FailTips">%s Pengguna gagal untuk berbagi</string>
+  <string name="Tap3_ShareDevice_Friends_FailTips">%d Pengguna gagal untuk berbagi</string>
   <string name="Tap3_ShareDevice_NoDevice">Belum ada perangkat</string>
   <string name="Tap3_ShareDevice_NoShare">Belum membagikan</string>
   <string name="Tap3_ShareDevice_NoneFriends">None</string>
@@ -710,7 +753,7 @@
   <string name="Tap3_ShareDevice_SuccessTips">Berhasil dibagikan</string>
   <string name="Tap3_ShareDevice_Tips">Perangkat ini tidak dapat dibagi dengan pengguna lebih</string>
   <string name="Tap3_ShareDevice_ToContacts">Berbagi dengan Kontak</string>
-  <string name="Tap3_TitleName">Saya</string>
+  <string name="Tap3_TitleName">Ranjau</string>
   <string name="Tap3_Uploading">Uploading &#8230;</string>
   <string name="Tap3_UploadingComplete">Upload complete</string>
   <string name="Tap3_UploadingFailed">Upload failed</string>
@@ -720,6 +763,7 @@
   <string name="Tap3_Userinfo_CameraRoll">Camera Roll</string>
   <string name="Tap3_Userinfo_NoCamera">Kamera tidak dapat menggunakan</string>
   <string name="Tap3_Userinfo_Photos">Photos</string>
+  <string name="Tap3_Userinfo_PhotosSelected">Terpilih(%1$s/%2$s)</string>
   <string name="Tap3_Userinfo_UsePhoto">Gunakan Foto</string>
   <string name="Tap3_logout_tips">Yakin ingin keluar?</string>
   <string name="Tap3_nickname_used">Sudah terpakai</string>
@@ -787,7 +831,7 @@
   <string name="connecting_ap">Sedang menyambungkan&#8230;</string>
   <string name="contacts_auth">Kontak</string>
   <string name="copy">Salin</string>
-  <string name="copyrightEn">Copyright ©2005&#8211;2016 Cylan.All Rights Reserved.</string>
+  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">Wi&#8211;Fi</string>
   <string name="dialog_callto_info">%s\nMungkin adalah nomor ponsel, anda bisa:</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
@@ -796,7 +840,8 @@
   <string name="getting">Mendapatkan&#8230;</string>
   <string name="has_copy">Direplikasi</string>
   <string name="has_not_sdcard">Tidak dapat menemukan Kartu SD</string>
-  <string name="help_url">http://www.jfgou.com/help/en.html</string>
+  <string name="help_url">https://yf.jfgou.com:8081/help/id.html</string>
+  <string name="help_url_Doby">https://yf.jfgou.com:8081/help/en_doby.html</string>
   <string name="isStorageLow">Kartu SD anda tidak cukup ruang</string>
   <string name="is_connecting_video">Sedang menyambungkan&#8230;</string>
   <string name="is_creating">Sedang menambahkan</string>
@@ -810,7 +855,7 @@
   <string name="rename">Edit nama</string>
   <string name="service_phonenum">+86 400&#8211;716&#8211;3232</string>
   <string name="set_failed">Gagal mensetel</string>
-  <string name="setwifi_check">Silahkan setel ponsel anda ke %s</string>
+  <string name="setwifi_check">Silahkan setel ponsel anda ke \"%s\"</string>
   <string name="share_content">APP ini sangat bagus. Saya suka sekali</string>
   <string name="show_web">www.cleverdog.com.cn</string>
   <string name="someone_call">Seseorang memanggil</string>
