--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -9,8 +9,8 @@
   <string name="ACCOUNT_ERR_1">有効なアカウントを入力してください</string>
   <string name="ACCOUNT_ERR_3">登録されているメールアドレスか電話番号を入力してください</string>
   <string name="ACCOUNT_ID">アカウントID:%s</string>
-  <string name="ACCOUNT_QQ">QQアカウント</string>
-  <string name="ACCOUNT_XL">新浪ブログアカウント</string>
+  <string name="ACCOUNT_QQ">QQ</string>
+  <string name="ACCOUNT_XL">Weibo</string>
   <string name="ADD_EQUIPMENT">\"+\" デバイスの追加]をクリックします</string>
   <string name="ADD_ERR_INFO">ネットワークへの接続が切断されました\n\"戻す\"をクリックして、ホームページでデバイスの確認をしてください。</string>
   <string name="ADD_FAILED">追加できませんでした。再試行してください。</string>
@@ -27,6 +27,8 @@
   <string name="AT_HOME">帰宅モード</string>
   <string name="AUDIBLE_ALERT">異常を検出した場合、サウンドで知らせる</string>
   <string name="Added_successfully">バインドうまく</string>
+  <string name="Apr">Apr.</string>
+  <string name="Aug">Aug.</string>
   <string name="BACK">戻す</string>
   <string name="BARKING">ワンワン</string>
   <string name="BATTERY_LEVEL">バッテリー残量</string>
@@ -129,15 +131,16 @@
   <string name="DOOR_SLIDE_TIP">右にスライドして通話</string>
   <string name="DOOR_STOPPED">切断</string>
   <string name="DOOR_TALK">通話</string>
-  <string name="TODAY">今日</string>
-  <string name="DOOR_UNBIND">デバイスを削除しました</string>
+  <string name="DOOR_TODAY">今日</string>
   <string name="DOOR_UNCALL">回答なし</string>
   <string name="DOOR_VOICE">ボイス</string>
   <string name="DOOR_WIFI_HINT">デバイスのライト状態説明</string>
+  <string name="DailyGreatTips_Full">毎日の見どころのコレクションは削除に行くかどうか、50の上限に達していますか？</string>
+  <string name="Dec">Dec.</string>
   <string name="EDIT_IMAGE">画像編集</string>
   <string name="EDIT_THEME">編集する</string>
   <string name="EFAMILY_BIND_SUCC">バインディング完了</string>
-  <string name="ANSWER">応答</string>
+  <string name="EFAMILY_CALL_ANSWER">応答</string>
   <string name="EFAMILY_CALL_BUSY">相手先が電話を出ることができません</string>
   <string name="EFAMILY_CALL_CANCEL">キャンセル</string>
   <string name="EFAMILY_CALL_DURATION">通話時間</string>
@@ -147,6 +150,7 @@
   <string name="EFAMILY_CANCEL_RECORD">上にスライドすると送信を取り消す</string>
   <string name="EFAMILY_CANCEL_SEND">緩め、送信の取り消し</string>
   <string name="EFAMILY_CLEAR_MSGLIST">メッセージリストを空にする</string>
+  <string name="EFAMILY_IGNORE">無視</string>
   <string name="EFAMILY_INVALID_DEVICE">無効なQRコード</string>
   <string name="EFAMILY_LOOK">今チェックする</string>
   <string name="EFAMILY_MENU_PHOTO">写真シェア</string>
@@ -197,12 +201,15 @@
   <string name="FRI_1">毎週金曜日</string>
   <string name="FRI_2">金曜日</string>
   <string name="FROME">開始時刻</string>
+  <string name="Feb">Feb.</string>
   <string name="GENERAL">一般</string>
   <string name="GET_CODE">検証コードをゲット</string>
   <string name="GIVE_UP">キャンセル</string>
   <string name="GLOBAL_NO_CONTENTS">記録なし</string>
   <string name="GLOBAL_NO_NETWORK">接続失敗、ネットワーク環境をチェックしてください</string>
   <string name="GUIDE_INFO">スライドして\nにもっと多くの内容が表示されます</string>
+  <string name="GetCode_FrequentlyTips">操作が頻繁になると、10分後にもう一度お試しください。</string>
+  <string name="GetWifiList_FaiTips">1.アプリに「場所」権限を許可する \n 2.「GPS」をオンにします。</string>
   <string name="HOME">ホーム</string>
   <string name="HOUR">时</string>
   <string name="HOURS">24時間プロプティング</string>
@@ -218,6 +225,9 @@
   <string name="Item_LoadFail">読み込み失敗</string>
   <string name="Item_NoContents">内容なし</string>
   <string name="JUST_NOW">ただいま</string>
+  <string name="Jan">Jan.</string>
+  <string name="Jul">Jul.</string>
+  <string name="Jun">Jun.</string>
   <string name="LARGER_IMAGE">クリックして拡大図を見る</string>
   <string name="LAST_UPDATE">前回更新</string>
   <string name="LED">インジケーターランプ</string>
@@ -241,8 +251,8 @@
   <string name="LOG">バージョンナンバー</string>
   <string name="LOGIN">ログイン</string>
   <string name="LOGIN_ERR">ログイン失敗</string>
-  <string name="LOGIN_QQ">QQログイン</string>
-  <string name="LOGIN_WEIBO">ブログログイン</string>
+  <string name="LOGIN_QQ">QQ</string>
+  <string name="LOGIN_WEIBO">Weibo</string>
   <string name="LOGOUT">ログアウト</string>
   <string name="LOGOUT_INFO">ログアウトによりアカウント情報が削除されません。再度ログインできます</string>
   <string name="LOW_BATTERY">バッテリー残量が低いです</string>
@@ -273,7 +283,6 @@
   <string name="MSG_SHARE">\"%s\"ユーザーにシェアしました</string>
   <string name="MSG_SYSTEM_UPGRADE">システムがアップデートされました（V%s）</string>
   <string name="MSG_UNBIND">デバイスのバインディングを解除しました</string>
-  <string name="MSG_UNBIND_INFO">デバイスのバインディングを解除しました</string>
   <string name="MSG_UNSHARE">%s ユーザーへのシェアを解除しました</string>
   <string name="MSG_VIDEO">生放送</string>
   <string name="MSG_WARNING">新しい発現がある</string>
@@ -281,6 +290,8 @@
   <string name="MSG_WARN_ON">防犯システムを開始しました、不審者が現れたらすぐにお知らせします</string>
   <string name="MUTE">サイレントモード</string>
   <string name="MY_HOME">マイホーム</string>
+  <string name="Mar">Mar.</string>
+  <string name="May">May.</string>
   <string name="NAME">名前</string>
   <string name="NETWORK">ネットワーク</string>
   <string name="NETWORK_1">モバイルネットワーク</string>
@@ -304,6 +315,8 @@
   <string name="NO_NETWORK_DOOR">接続失敗、ネットワーク環境をチェックしてください</string>
   <string name="NO_SDCARD">Micro SDカードが検出できません</string>
   <string name="NO_SET">未設定です</string>
+  <string name="NoNetworkTips">ネットワーク接続なし</string>
+  <string name="Nov">Nov.</string>
   <string name="OFF">オフ</string>
   <string name="OFFLINE_ERR">デバイスがオフラインです</string>
   <string name="OFFLINE_ERR_1">ネットワークが切断されました</string>
@@ -316,6 +329,7 @@
   <string name="OTHERS_LOOKING">他のユーザーが閲覧中</string>
   <string name="OTHER_TIME">その他</string>
   <string name="OUT_OF_HOME">外出モード</string>
+  <string name="Oct">Oct.</string>
   <string name="PASSWORD">パスワード</string>
   <string name="PASSWORD_BIT">新しいパスワードを設定してください</string>
   <string name="PASSWORD_LESSTHAN_SIX">6~12文字でパスワードを入力してください</string>
@@ -490,6 +504,8 @@
   <string name="Sdcard_AvailableCapacity">利用できます</string>
   <string name="Sdcard_TotalCapacity">総容量</string>
   <string name="Search">検索</string>
+  <string name="Sep">Sep.</string>
+  <string name="ShareTo">Share to %s</string>
   <string name="Slogan">Homesick, Use Clever Dog</string>
   <string name="Slogan_Zhongxing">Smart Home, for better life</string>
   <string name="TAKE_PHOTO">一枚写真を撮る</string>
@@ -510,15 +526,24 @@
   <string name="TUE_1">毎週火曜日</string>
   <string name="TUE_2">火曜日</string>
   <string name="TURN_ON_PROTECTION">起動後、警報時間帯に画面の変化を検出した場合、警報およびメッセージ通知を行う。</string>
+  <string name="Tap0_AlreadyEmailed">既にに電子メールで送信</string>
   <string name="Tap0_Authorizationfailed">権限付与は失敗しました。後でもう一回申請してください。</string>
   <string name="Tap0_BindEmail">Eメールアドレスに連動します</string>
   <string name="Tap0_BindPhoneNo">携帯電話に連動します</string>
   <string name="Tap0_BindTips">連動後ログイン及びパスワードの再設定に使えます</string>
+  <string name="Tap0_Click_ActivateAccount">アカウントを有効にするためのリンクをクリックしてください。</string>
+  <string name="Tap0_Click_ResetPassword">パスワードをリセットするリンクをクリックしてください</string>
+  <string name="Tap0_Login_NoInstalled">携帯端末で%sアプリをインストールされてませんので</string>
   <string name="Tap0_Register_VerificationCode">確認コードを入力してください</string>
   <string name="Tap0_WelcomeTourist">先に見てみます</string>
   <string name="Tap0_enterphoneoremail">Eメールアドレスを入力してください</string>
   <string name="Tap0_invaildcode">確認コードが無効です</string>
   <string name="Tap0_register">新規取得</string>
+  <string name="Tap0_register_EmailVerification">メール確認</string>
+  <string name="Tap0_register_GoToLogin">ログイン</string>
+  <string name="Tap0_register_SendEmail">もう一度送信</string>
+  <string name="Tap0_register_SendEmailTips">メールが送信されました</string>
+  <string name="Tap0_register_VerificationTips">アクティベーションメールが%sに送信されました。リンクをクリックしてアカウントを有効にしてください。</string>
   <string name="Tap0_wrongcode">確認コードが間違いました</string>
   <string name="Tap1_AddDeviceTips">右上の「＋」をクリックし、デバイスを追加しましょう</string>
   <string name="Tap1_AddDevice_CameraTips">インジケータが青色で点滅されるまで待ち</string>
@@ -556,7 +581,7 @@
   <string name="Tap1_CameraFun_Timelapse_NotStart">間もなく開始</string>
   <string name="Tap1_CameraFun_Timelapse_OnTips">「遅延撮影」を作動後、カメラが一定間隔で撮影し、撮影の後自動的にこの撮影機能を終了し、写真を「毎日の見どころ」に保存します。</string>
   <string name="Tap1_CameraFun_Timelapse_RecordTime">撮影時間</string>
-  <string name="Tap1_CameraFun_Timelapse_Setting">もう一度撮影します</string>
+  <string name="Tap1_CameraFun_Timelapse_Setting">撃ちます</string>
   <string name="Tap1_CameraFun_Timelapse_StandbyTips">カメラが安全待機中です、遅延撮影を作動するには安全待機モードをオフにしてください。</string>
   <string name="Tap1_CameraFun_Timelapse_Start">すぐにオンします</string>
   <string name="Tap1_CameraFun_Timelapse_StartTime">開始時間</string>
@@ -580,9 +605,11 @@
   <string name="Tap1_Camera_NoSDCardTips">いいえSDカードが検出されません</string>
   <string name="Tap1_Camera_Overlook">俯瞰</string>
   <string name="Tap1_Camera_OverlookTips">トップダウンビューの観点から順に、カメラが高い上に配置される必要があります</string>
+  <string name="Tap1_Camera_OverlookTips_View">俯瞰：トップダウンビューの観点から順に \n カメラが高い上に配置される必要があります</string>
   <string name="Tap1_Camera_Playback">録画</string>
   <string name="Tap1_Camera_Record_EndTips">終わり</string>
   <string name="Tap1_Camera_SetProtectionTips">保護を設定</string>
+  <string name="Tap1_Camera_SpaceUsage">スペース使用量(%1$s/%2$s)</string>
   <string name="Tap1_Camera_Video">ビデオ</string>
   <string name="Tap1_Camera_VideoLive">生放送</string>
   <string name="Tap1_Camera_Video_DormantTips">待機状態に入りました、クリックして解除へ</string>
@@ -590,17 +617,29 @@
   <string name="Tap1_Camera_Video_Standby">待機状態に入りました</string>
   <string name="Tap1_Camera_Video_Standby_OffTips">クリックして解除へ</string>
   <string name="Tap1_Camera_ViewAngle">視野角</string>
+  <string name="Tap1_CurrentVersion">現行版</string>
   <string name="Tap1_Device_NoConnection">いいえ、ネットワーク接続、[更新]をクリックしません</string>
   <string name="Tap1_Device_UpgradeTips">更新するかどうか、デバイスの新しいファームウェアを見つける？</string>
   <string name="Tap1_DoorFun_VoiceTips">音声はスピーカーから放送します。</string>
   <string name="Tap1_DoorFun_Waitting">呼び出しの応答を待ってます。</string>
+  <string name="Tap1_DownloadFirmwareFai">ファームウェアのダウンロードに失敗しました</string>
+  <string name="Tap1_DownloadFirmwareTips">ダウンロードが間もなく開始されます。携帯電話と端末が同じWIFIに接続していることを確認してください</string>
+  <string name="Tap1_FirmwareDownloading">ダウンロード(%s)</string>
+  <string name="Tap1_FirmwareUpdate">ファームウェアのアップデート</string>
+  <string name="Tap1_FirmwareUpdateFai">更新失敗</string>
+  <string name="Tap1_FirmwareUpdateSuc">更新に成功</string>
+  <string name="Tap1_FirmwareUpdating">更新中(%s)</string>
+  <string name="Tap1_Firmware_DataTips">WIFI接続なしで続行すればデータ消費が発生するでしょうか？</string>
   <string name="Tap1_Index_DayGreetings">毎日の自分に小さな期待を</string>
   <string name="Tap1_Index_NightGreetings">毎度のリラックスは新しい憧れをもたらす</string>
   <string name="Tap1_Index_NoDevice">デバイスは追加されていません</string>
   <string name="Tap1_Index_Tips_Newvisitor">新しい訪問者</string>
   <string name="Tap1_Index_Tips_Newvoice">新しいボイスメッセージ</string>
+  <string name="Tap1_LatestFirmwareTips">それは最新のバージョンです</string>
+  <string name="Tap1_LatestVersion">最新バージョン</string>
   <string name="Tap1_Magnetism_ClearRecord">レコードをクリア</string>
   <string name="Tap1_Magnetism_Setting_Notify">オン/オフ情報を知らせて</string>
+  <string name="Tap1_NewFirmware">新しいファームウェア</string>
   <string name="Tap1_NoMessages">メッセージはありません</string>
   <string name="Tap1_SelectDevice">デバイス選択</string>
   <string name="Tap1_Setting_Cid">CID 番号</string>
@@ -609,23 +648,26 @@
   <string name="Tap1_Tipsforclearrecents">通信記録をクリアしますか。</string>
   <string name="Tap1_TitleName">ホーム</string>
   <string name="Tap1_Tosetup">設定へ</string>
+  <string name="Tap1_Update">更新</string>
   <string name="Tap1_device_deleted">デバイスを削除されました。</string>
   <string name="Tap1_iHome_Associate">関連</string>
   <string name="Tap1_iHome_Associated">関連する</string>
-  <string name="Tap1_iHome_CallDuration">通話時間：%s</string>
+  <string name="Tap1_iHome_CallDuration">通話時間：%d</string>
   <string name="Tap1_iHome_ClearRecord">レコードをクリア</string>
   <string name="Tap1_iHome_NotAssociated"></string>
   <string name="Tap1_iHome_disassociate">関連をキャンセルします。</string>
   <string name="Tap1_shareDevice_canceledshare">該当デバイスは共有をキャンセルしました。</string>
   <string name="Tap1_share_tips">私の友人になることを招待しました。 %sをクリックしたら、CleverDog appをインストールできます。</string>
+  <string name="Tap1a_DownloadInstall">ダウンロードとインストール(%s)</string>
   <string name="Tap2_Index_DemoVideo">デモビデオ</string>
   <string name="Tap2_Index_Greetings">日々のライフは記録されるべく</string>
   <string name="Tap2_Index_No3GCameraTips">3Gカメラのみサポート</string>
   <string name="Tap2_Index_OpenTimelapse">起動するには</string>
   <string name="Tap2_Index_Open_NoDevice">この機能をオンにするにはスマートカメラの連動が必要です、今すぐ連動しますか</string>
   <string name="Tap2_Index_Open_NoDeviceOption">連動する</string>
-  <string name="Tap2_Share_Moments">wechatモーメンツ</string>
-  <string name="Tap2_Share_Wechat">wechat友人</string>
+  <string name="Tap2_NoPermissions_FailedDownloadTips">SDカードの権限を取得できませんでした。ダウンロードがキャンセルされました</string>
+  <string name="Tap2_Share_Moments">Moments</string>
+  <string name="Tap2_Share_Wechat">Wechat</string>
   <string name="Tap2_Timelapse_Alarmimages">アラーム画像</string>
   <string name="Tap2_Timelapse_fail">デバイスは、タイムラプス撮影時にオフラインであるため、ビデオを生成することができません</string>
   <string name="Tap2_Timelapse_screenshot">生放送の画像切り取り</string>
@@ -644,8 +686,9 @@
   <string name="Tap3_Feedback_AutoTips">私たちは常にあなた様のご意見とアドバイスをお待ち申し上げます</string>
   <string name="Tap3_Feedback_Clear">クリア</string>
   <string name="Tap3_Feedback_ClearTips">明確なメッセージ？</string>
+  <string name="Tap3_Feedback_Resend">再送信？</string>
   <string name="Tap3_Feedback_TextFail">入力内容は10文字以上でなければなりません</string>
-  <string name="Tap3_Feedback_TextTips">故障、ご意見またはアドバイスを詳しくご説明ください</string>
+  <string name="Tap3_Feedback_TextTips">あなたの問題を説明してください</string>
   <string name="Tap3_Friends">友達</string>
   <string name="Tap3_FriendsAdd">友達を追加</string>
   <string name="Tap3_FriendsAdd_Agree">同意</string>
@@ -660,7 +703,7 @@
   <string name="Tap3_FriendsAdd_NoContacts">連絡先なし</string>
   <string name="Tap3_FriendsAdd_NoContent">結果が見つかりませんでした。</string>
   <string name="Tap3_FriendsAdd_NotYourself">あなた自身を友達として追加することはできません</string>
-  <string name="Tap3_FriendsAdd_QR">QRコードでスキャンし、追加します</string>
+  <string name="Tap3_FriendsAdd_QR">QRコードをスキャン</string>
   <string name="Tap3_FriendsAdd_QR_Tips">相手のQRコードをスキャンフレームに合わせます</string>
   <string name="Tap3_FriendsAdd_Request">のリクエスト加える</string>
   <string name="Tap3_FriendsAdd_RequestContents">%sはあなたを友達として追加したい</string>
@@ -686,6 +729,7 @@
   <string name="Tap3_LogIn">ログイン</string>
   <string name="Tap3_MessageCancel">キャンセル</string>
   <string name="Tap3_MyQRCode">私の二次元コード</string>
+  <string name="Tap3_NoPermissions_FailedViewImages">画像を表示するには、ストレージにアクセス許可が必要です</string>
   <string name="Tap3_SavePic">写真を保存</string>
   <string name="Tap3_Setting_taptoload">軽く触って、再ダウンロードできます。</string>
   <string name="Tap3_ShareDevice">デバイスシェア</string>
@@ -700,7 +744,7 @@
   <string name="Tap3_ShareDevice_ExceedTips">五名以下の友達にシェアできます</string>
   <string name="Tap3_ShareDevice_FailTips">共有に失敗しました</string>
   <string name="Tap3_ShareDevice_Friends">友達にシェアします</string>
-  <string name="Tap3_ShareDevice_Friends_FailTips">%sのユーザーが共有することができませんでした</string>
+  <string name="Tap3_ShareDevice_Friends_FailTips">%dのユーザーが共有することができませんでした</string>
   <string name="Tap3_ShareDevice_NoDevice">デバイスは連動されていません</string>
   <string name="Tap3_ShareDevice_NoShare">共有されていません</string>
   <string name="Tap3_ShareDevice_NoneFriends">なし</string>
@@ -709,7 +753,7 @@
   <string name="Tap3_ShareDevice_SuccessTips">シェア完了</string>
   <string name="Tap3_ShareDevice_Tips">デバイスは共有の最大数に達しました</string>
   <string name="Tap3_ShareDevice_ToContacts">連絡先と共有します</string>
-  <string name="Tap3_TitleName">私に</string>
+  <string name="Tap3_TitleName">鉱山</string>
   <string name="Tap3_Uploading">のアップロード&#8230;</string>
   <string name="Tap3_UploadingComplete">アップロードが完了しました</string>
   <string name="Tap3_UploadingFailed">のアップロード失敗</string>
@@ -719,6 +763,7 @@
   <string name="Tap3_Userinfo_CameraRoll">カメラロール</string>
   <string name="Tap3_Userinfo_NoCamera">カメラは使用できません</string>
   <string name="Tap3_Userinfo_Photos">フォト</string>
+  <string name="Tap3_Userinfo_PhotosSelected">選択された(%1$s/%2$s)</string>
   <string name="Tap3_Userinfo_UsePhoto">使用フォト</string>
   <string name="Tap3_logout_tips">サインアウトしますか。</string>
   <string name="Tap3_nickname_used">このニックネームもうすでに他のユーザーに利用されました。</string>
@@ -786,7 +831,7 @@
   <string name="connecting_ap">獲得中&#8230;</string>
   <string name="contacts_auth">連絡帳</string>
   <string name="copy">复制</string>
-  <string name="copyrightEn">Copyright ©2005&#8211;2016 Cylan.All Rights Reserved.</string>
+  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">Wi&#8211;Fi</string>
   <string name="dialog_callto_info">%s\nは、電話番号であってもよいし、次のことができます：</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
@@ -795,7 +840,8 @@
   <string name="getting">獲得中&#8230;</string>
   <string name="has_copy">已复制</string>
   <string name="has_not_sdcard">Micro SDカードを検出できません</string>
-  <string name="help_url">http://www.jfgou.com/help/ja.html</string>
+  <string name="help_url">https://yf.jfgou.com:8081/help/ja.html</string>
+  <string name="help_url_Doby">https://yf.jfgou.com:8081/help/en_doby.html</string>
   <string name="isStorageLow">Micro SDカードが使用できるスペースがない場合、古い動画を順番に削除する</string>
   <string name="is_connecting_video">接続中</string>
   <string name="is_creating">保存中</string>
@@ -809,8 +855,8 @@
   <string name="rename">名前編集</string>
   <string name="service_phonenum">+86 400&#8211;716&#8211;3232</string>
   <string name="set_failed">設定ができませんでした</string>
-  <string name="setwifi_check">設定次に、%sのWiFiネットワークに接続してください</string>
-  <string name="share_content">最近我在用这款手机APP， 配合一个摄像头可以随时随地看到家里的老人、宝宝和财物，非常好用，推荐你也试试哦</string>
+  <string name="setwifi_check">設定次に、\"%s\"のWiFiネットワークに接続してください</string>
+  <string name="share_content">ニースアプリ、あなたも試してみることができます〜</string>
   <string name="show_web">www.cleverdog.com.cn</string>
   <string name="someone_call">友人を呼び出し</string>
   <string name="sound_auth">音</string>
