--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -27,6 +27,8 @@
   <string name="AT_HOME">Evde</string>
   <string name="AUDIBLE_ALERT">Hareket seçildiğinde çalınacak olan Sesli alarmı seçiniz</string>
   <string name="Added_successfully">Başarıyla bind</string>
+  <string name="Apr">Apr.</string>
+  <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
   <string name="BARKING">Havlıyor</string>
   <string name="BATTERY_LEVEL">Batarya Kullanımı</string>
@@ -129,15 +131,16 @@
   <string name="DOOR_SLIDE_TIP">Cevaplamak için kaydırın</string>
   <string name="DOOR_STOPPED">Bağlantıyı kopar</string>
   <string name="DOOR_TALK">Hoparlör</string>
-  <string name="TODAY">Bugün</string>
-  <string name="DOOR_UNBIND">Cihazı sildiniz</string>
+  <string name="DOOR_TODAY">Bugün</string>
   <string name="DOOR_UNCALL">Cevapsız</string>
   <string name="DOOR_VOICE">Ses</string>
   <string name="DOOR_WIFI_HINT">LED Durum Göstergesi</string>
+  <string name="DailyGreatTips_Full">Koleksiyonun Günlük Mükemmel sayısı 50\'ye ulaştı, silinecek mi?</string>
+  <string name="Dec">Dec.</string>
   <string name="EDIT_IMAGE">Düzenle</string>
   <string name="EDIT_THEME">Düzenle</string>
   <string name="EFAMILY_BIND_SUCC">Başarılı bir şekilde ekle</string>
-  <string name="ANSWER">Cevapla</string>
+  <string name="EFAMILY_CALL_ANSWER">Cevapla</string>
   <string name="EFAMILY_CALL_BUSY">Meşgul</string>
   <string name="EFAMILY_CALL_CANCEL">İptal edildi</string>
   <string name="EFAMILY_CALL_DURATION">Süreç</string>
@@ -147,6 +150,7 @@
   <string name="EFAMILY_CANCEL_RECORD">İptal için yukarı taşı</string>
   <string name="EFAMILY_CANCEL_SEND">İptal için serbest bırak</string>
   <string name="EFAMILY_CLEAR_MSGLIST">Mesaj listesini sil</string>
+  <string name="EFAMILY_IGNORE">Yok say</string>
   <string name="EFAMILY_INVALID_DEVICE">Geçersiz QR kod</string>
   <string name="EFAMILY_LOOK">Görüntüle</string>
   <string name="EFAMILY_MENU_PHOTO">Fotoğraflar</string>
@@ -197,12 +201,15 @@
   <string name="FRI_1">Cuma</string>
   <string name="FRI_2">Cuma</string>
   <string name="FROME">den</string>
+  <string name="Feb">Feb.</string>
   <string name="GENERAL">Genel</string>
   <string name="GET_CODE">Al</string>
   <string name="GIVE_UP">Çıkış</string>
   <string name="GLOBAL_NO_CONTENTS">İçerik yok</string>
   <string name="GLOBAL_NO_NETWORK">Ağa bağlı değil</string>
   <string name="GUIDE_INFO">Kaygan，\n daha fazla göster</string>
+  <string name="GetCode_FrequentlyTips">İşlemler çok sıktır, lütfen 10 dakika sonra tekrar deneyin.</string>
+  <string name="GetWifiList_FaiTips">1.Uygulamanın \"Konum\" iznini almasına izin ver \n 2.\"GPS\" i açın.</string>
   <string name="HOME">Ev</string>
   <string name="HOUR">S</string>
   <string name="HOURS">24 saat</string>
@@ -218,6 +225,9 @@
   <string name="Item_LoadFail">Yükleme başarısız</string>
   <string name="Item_NoContents">İçerik yok</string>
   <string name="JUST_NOW">Tam şimdi</string>
+  <string name="Jan">Jan.</string>
+  <string name="Jul">Jul.</string>
+  <string name="Jun">Jun.</string>
   <string name="LARGER_IMAGE">Büyük resim görüntüle</string>
   <string name="LAST_UPDATE">Son güncelleme</string>
   <string name="LED">Cihaz gösterge ışığı</string>
@@ -273,7 +283,6 @@
   <string name="MSG_SHARE">%s ile paylaşıldı</string>
   <string name="MSG_SYSTEM_UPGRADE">Çok uygun! Sistemi V%s e yükseltir</string>
   <string name="MSG_UNBIND">Cihaz silindi</string>
-  <string name="MSG_UNBIND_INFO">Cihaz silindi</string>
   <string name="MSG_UNSHARE">%s lik pay silindi</string>
   <string name="MSG_VIDEO">Video</string>
   <string name="MSG_WARNING">Yeni keşif</string>
@@ -281,6 +290,8 @@
   <string name="MSG_WARN_ON">Hareket algılamayı açtınız. Cihaz, herhangi bir şey hareket ettiğinde size hemen bildirecektir.</string>
   <string name="MUTE">Sessiz</string>
   <string name="MY_HOME">Evim</string>
+  <string name="Mar">Mar.</string>
+  <string name="May">May.</string>
   <string name="NAME">Ad</string>
   <string name="NETWORK">Ağ</string>
   <string name="NETWORK_1">Hücresel</string>
@@ -304,6 +315,8 @@
   <string name="NO_NETWORK_DOOR">Ağ bağlantısı yok</string>
   <string name="NO_SDCARD">Hiçbir Micro SD kart yok</string>
   <string name="NO_SET">Tanımsız</string>
+  <string name="NoNetworkTips">Ağ bağlantısı yok</string>
+  <string name="Nov">Nov.</string>
   <string name="OFF">Kapalı</string>
   <string name="OFFLINE_ERR">Cihaz çevrimdışı</string>
   <string name="OFFLINE_ERR_1">Internete bağlı değil</string>
@@ -316,6 +329,7 @@
   <string name="OTHERS_LOOKING">Birisi canlı video izliyor</string>
   <string name="OTHER_TIME">Diğer</string>
   <string name="OUT_OF_HOME">Ev dışı</string>
+  <string name="Oct">Oct.</string>
   <string name="PASSWORD">Şifre</string>
   <string name="PASSWORD_BIT">Yeni şifre</string>
   <string name="PASSWORD_LESSTHAN_SIX">Lütfen 6 şifrenin üstünde giriş yapın</string>
@@ -490,6 +504,8 @@
   <string name="Sdcard_AvailableCapacity">Mevcut</string>
   <string name="Sdcard_TotalCapacity">Genel Toplam</string>
   <string name="Search">Arama</string>
+  <string name="Sep">Sep.</string>
+  <string name="ShareTo">Share to %s</string>
   <string name="Slogan">Homesick, Use Clever Dog</string>
   <string name="Slogan_Zhongxing">Smart Home, for better life</string>
   <string name="TAKE_PHOTO">Fotoğraf çek</string>
@@ -510,15 +526,24 @@
   <string name="TUE_1">Salı</string>
   <string name="TUE_2">Salı</string>
   <string name="TURN_ON_PROTECTION">Güvenlik Koruması açıkken hareket algılama otomatik olarak açılacaktır ve zaman aralığı ayarlamasına göre alarmlar gönderecektir.</string>
+  <string name="Tap0_AlreadyEmailed">Için zaten e&#8211;postayla gönderildi</string>
   <string name="Tap0_Authorizationfailed">Yetki başarısız, lütfen tekrar deneyiniz</string>
   <string name="Tap0_BindEmail">E&#8211;posta adresinizi bağlayın</string>
   <string name="Tap0_BindPhoneNo">Cep telefonunuzu bağlayın</string>
   <string name="Tap0_BindTips">Giriş için bağlanın veya yeniden şifre alın.</string>
+  <string name="Tap0_Click_ActivateAccount">Hesabınızı etkinleştirmek için lütfen bağlantıyı tıklayın.</string>
+  <string name="Tap0_Click_ResetPassword">Şifre sıfırlamak için lütfen bağlantıyı tıklayın</string>
+  <string name="Tap0_Login_NoInstalled">Kurulu %s yok</string>
   <string name="Tap0_Register_VerificationCode">Onay kodunu giriniz</string>
   <string name="Tap0_WelcomeTourist">Bir göz atın.</string>
   <string name="Tap0_enterphoneoremail">Cep telefonu numaranızı veya e&#8211;posta adresinizi girin</string>
   <string name="Tap0_invaildcode">Geçersiz kod</string>
   <string name="Tap0_register">Kayıt</string>
+  <string name="Tap0_register_EmailVerification">Eposta Doğrulama</string>
+  <string name="Tap0_register_GoToLogin">Giriş yap</string>
+  <string name="Tap0_register_SendEmail">Tekrar gönderin</string>
+  <string name="Tap0_register_SendEmailTips">Email gönderildi</string>
+  <string name="Tap0_register_VerificationTips">Etkinleştirme e&#8211;postası %s\'ya gönderildi, lütfen hesabınızı etkinleştirmek için bağlantıyı tıklayın.</string>
   <string name="Tap0_wrongcode">Hata</string>
   <string name="Tap1_AddDeviceTips">Cihaz eklemek için\"+\"ya tıklayın</string>
   <string name="Tap1_AddDevice_CameraTips">Gösterge mavi titremesine bekleyin</string>
@@ -556,7 +581,7 @@
   <string name="Tap1_CameraFun_Timelapse_NotStart">Başlıyor</string>
   <string name="Tap1_CameraFun_Timelapse_OnTips">Çekim yapılıp\"Günlük Mükemmel\"e kaydedildiğinde hızlandırılmış fotoğrafotomatik olarak kapanacaktır.</string>
   <string name="Tap1_CameraFun_Timelapse_RecordTime">Çekim uzunluğu</string>
-  <string name="Tap1_CameraFun_Timelapse_Setting">Bir resim daha çekin</string>
+  <string name="Tap1_CameraFun_Timelapse_Setting">Ateş etme</string>
   <string name="Tap1_CameraFun_Timelapse_StandbyTips">Beklemedeyi kapatmadan önce hızlandırılmış fotoğrafı başlat</string>
   <string name="Tap1_CameraFun_Timelapse_Start">Şimdi başlat</string>
   <string name="Tap1_CameraFun_Timelapse_StartTime">Başlama zamanı</string>
@@ -580,9 +605,11 @@
   <string name="Tap1_Camera_NoSDCardTips">SD kart yok algılandı</string>
   <string name="Tap1_Camera_Overlook">Overlook</string>
   <string name="Tap1_Camera_OverlookTips">bakan açı ile görüntüleniyor yüksek kamerayı yerleştirmek gerekiyor</string>
+  <string name="Tap1_Camera_OverlookTips_View">Overlook:Bakan açı ile görüntüleniyor yüksek kamerayı yerleştirmek gerekiyor</string>
   <string name="Tap1_Camera_Playback">kaydediliyor</string>
   <string name="Tap1_Camera_Record_EndTips">Son</string>
   <string name="Tap1_Camera_SetProtectionTips">Koruma Set</string>
+  <string name="Tap1_Camera_SpaceUsage">Uzay kullanımı(%1$s/%2$s)</string>
   <string name="Tap1_Camera_Video">Video</string>
   <string name="Tap1_Camera_VideoLive">Live</string>
   <string name="Tap1_Camera_Video_DormantTips">Beklemede, kapatmak için tıklayınız</string>
@@ -590,17 +617,29 @@
   <string name="Tap1_Camera_Video_Standby">Beklemede</string>
   <string name="Tap1_Camera_Video_Standby_OffTips">Kapatmak için tıklayınız</string>
   <string name="Tap1_Camera_ViewAngle">görünüm açısı</string>
+  <string name="Tap1_CurrentVersion">Şimdiki versiyonu</string>
   <string name="Tap1_Device_NoConnection">No ağ bağlantısı, Yenile tıklayın</string>
   <string name="Tap1_Device_UpgradeTips">Güncellemek veya güncellemek için cihazın yeni ürün bilgisini bulma?</string>
   <string name="Tap1_DoorFun_VoiceTips">Sesler, alıcı tarafından çıkacak</string>
   <string name="Tap1_DoorFun_Waitting">Bekleniyor&#8230;</string>
+  <string name="Tap1_DownloadFirmwareFai">İndir firmware başarısız</string>
+  <string name="Tap1_DownloadFirmwareTips">İndirme kısa bir süre içinde başlayacak,lütfen cep telefonunun ve cihazının aynı WIFI ile bağlantı kurduğundan emin olun</string>
+  <string name="Tap1_FirmwareDownloading">İndiriliyor(%s)</string>
+  <string name="Tap1_FirmwareUpdate">Firmware güncellemesi</string>
+  <string name="Tap1_FirmwareUpdateFai">Güncelleştirme başarısız</string>
+  <string name="Tap1_FirmwareUpdateSuc">Başarıyla güncelle</string>
+  <string name="Tap1_FirmwareUpdating">Güncelleniyor(%s)</string>
+  <string name="Tap1_Firmware_DataTips">Veri tüketimi,WIFI bağlantısı olmadan devam ederse oluşturulacak mı?</string>
   <string name="Tap1_Index_DayGreetings">Hergün kendiniz için küçük bir sürpriz</string>
   <string name="Tap1_Index_NightGreetings">Biraz dinlenin ve tekrar başlayın</string>
   <string name="Tap1_Index_NoDevice">Cihaz yok</string>
   <string name="Tap1_Index_Tips_Newvisitor">yeni ziyaretçi</string>
   <string name="Tap1_Index_Tips_Newvoice">Yeni sesli mesaj</string>
+  <string name="Tap1_LatestFirmwareTips">Bu son sürümü</string>
+  <string name="Tap1_LatestVersion">Son versiyon</string>
   <string name="Tap1_Magnetism_ClearRecord">kayıt temizleyin</string>
-  <string name="Tap1_Magnetism_Setting_Notify">Beni bilgilendir ne zaman açık / kapalı</string>
+  <string name="Tap1_Magnetism_Setting_Notify">Beni bilgilendir ne zaman açık/kapalı</string>
+  <string name="Tap1_NewFirmware">yeni firmware</string>
   <string name="Tap1_NoMessages">Mesaj yok</string>
   <string name="Tap1_SelectDevice">Cihaz seç</string>
   <string name="Tap1_Setting_Cid">CID numara</string>
@@ -608,24 +647,27 @@
   <string name="Tap1_Tipsforautostart">Kamera ve kapı zilinden mesaj almak için programın otomatik olarak başlatmasına izin verin.</string>
   <string name="Tap1_Tipsforclearrecents">Son çağrılar temizlensin mi?</string>
   <string name="Tap1_TitleName">Ev</string>
-  <string name="Tap1_Tosetup">Kurmak için</string>
+  <string name="Tap1_Tosetup">Kurulum</string>
+  <string name="Tap1_Update">Güncelleştir</string>
   <string name="Tap1_device_deleted">Bu cihaz silindi</string>
   <string name="Tap1_iHome_Associate">Birleştir</string>
   <string name="Tap1_iHome_Associated">Ilişkili</string>
-  <string name="Tap1_iHome_CallDuration">Arama süresi:%s</string>
+  <string name="Tap1_iHome_CallDuration">Arama süresi:%d</string>
   <string name="Tap1_iHome_ClearRecord">kayıt temizleyin</string>
   <string name="Tap1_iHome_NotAssociated">Ilişkili değil</string>
   <string name="Tap1_iHome_disassociate">Ayır</string>
   <string name="Tap1_shareDevice_canceledshare">Bu cihaz, bu paylaşımı iptal etti</string>
   <string name="Tap1_share_tips">Arkadaşım olman için davet gönder ve Clever Dog uygulamasını indirip kurmak için %s e tıkla</string>
+  <string name="Tap1a_DownloadInstall">İndirme ve yükleme(%s)</string>
   <string name="Tap2_Index_DemoVideo">Demo video</string>
   <string name="Tap2_Index_Greetings">Hergün kaydet</string>
   <string name="Tap2_Index_No3GCameraTips">Sadece 3G Kamera desteği</string>
   <string name="Tap2_Index_OpenTimelapse">Başlatmak için</string>
   <string name="Tap2_Index_Open_NoDevice">Bu fonksiyonu başlatmak için öncelikle cihazın bağlanması gerekiyor, bağlansın mı bağlanmasın mı?</string>
   <string name="Tap2_Index_Open_NoDeviceOption">Evet</string>
-  <string name="Tap2_Share_Moments">Wechat arkadaş çevrimi</string>
-  <string name="Tap2_Share_Wechat">Wechat arkadaşları</string>
+  <string name="Tap2_NoPermissions_FailedDownloadTips">SD kartı izinleri alınamadı.İndirilen indirme işlemi iptal edildi</string>
+  <string name="Tap2_Share_Moments">Moments</string>
+  <string name="Tap2_Share_Wechat">Wechat</string>
   <string name="Tap2_Timelapse_Alarmimages">Alarm resimleri</string>
   <string name="Tap2_Timelapse_fail">Hızlandırılmış fotoğraf çekilirken bağlantı kesilmesi için video dosyası üretilemez</string>
   <string name="Tap2_Timelapse_screenshot">Canlı ekran görüntüleri</string>
@@ -644,8 +686,9 @@
   <string name="Tap3_Feedback_AutoTips">Önerilerinizi ve yorumlarınız bekliyoruz</string>
   <string name="Tap3_Feedback_Clear">Temiz</string>
   <string name="Tap3_Feedback_ClearTips">Berrak mesajlar?</string>
+  <string name="Tap3_Feedback_Resend">Tekrar gönder?</string>
   <string name="Tap3_Feedback_TextFail">10 karakterden az olamaz</string>
-  <string name="Tap3_Feedback_TextTips">Lütfen sorun, tavsiye ve önerilerinizi detaylı bir şekilde anlatınız</string>
+  <string name="Tap3_Feedback_TextTips">Lütfen sorununuzu açıklayın</string>
   <string name="Tap3_Friends">Akrabalar</string>
   <string name="Tap3_FriendsAdd">Arkadaş olarak ekle</string>
   <string name="Tap3_FriendsAdd_Agree">Kabul et</string>
@@ -686,6 +729,7 @@
   <string name="Tap3_LogIn">Giriş yap</string>
   <string name="Tap3_MessageCancel">Canceled</string>
   <string name="Tap3_MyQRCode">Benim QR code</string>
+  <string name="Tap3_NoPermissions_FailedViewImages">Uygulama görüntüleri izlemek için Depolama izni gerektirir</string>
   <string name="Tap3_SavePic">Resimleri kaydet</string>
   <string name="Tap3_Setting_taptoload">Yeniden yüklemek için dokunun</string>
   <string name="Tap3_ShareDevice">Cihazı paylaş</string>
@@ -700,7 +744,7 @@
   <string name="Tap3_ShareDevice_ExceedTips">En fazla 5 arkadaşla paylaş</string>
   <string name="Tap3_ShareDevice_FailTips">paylaşmak için başarısız oldu</string>
   <string name="Tap3_ShareDevice_Friends">Arkadaşlarınla paylaş</string>
-  <string name="Tap3_ShareDevice_Friends_FailTips">%s Kullanıcıların paylaşmak için başarısız oldu</string>
+  <string name="Tap3_ShareDevice_Friends_FailTips">%d Kullanıcıların paylaşmak için başarısız oldu</string>
   <string name="Tap3_ShareDevice_NoDevice">Cihaz yok.</string>
   <string name="Tap3_ShareDevice_NoShare">paylaşıldı değil</string>
   <string name="Tap3_ShareDevice_NoneFriends">Hiçbiri</string>
@@ -709,7 +753,7 @@
   <string name="Tap3_ShareDevice_SuccessTips">Başarılı olarak paylaşıldı</string>
   <string name="Tap3_ShareDevice_Tips">Bu cihaz, herhangi bir daha fazla kullanıcı ile paylaşılamaz</string>
   <string name="Tap3_ShareDevice_ToContacts">Contacts ile paylaş</string>
-  <string name="Tap3_TitleName">Ben mi</string>
+  <string name="Tap3_TitleName">Mayın</string>
   <string name="Tap3_Uploading">Uploading&#8230;</string>
   <string name="Tap3_UploadingComplete">Upload complete</string>
   <string name="Tap3_UploadingFailed">Upload failed</string>
@@ -719,6 +763,7 @@
   <string name="Tap3_Userinfo_CameraRoll">kamera rulo</string>
   <string name="Tap3_Userinfo_NoCamera">Kamera kullanamaz</string>
   <string name="Tap3_Userinfo_Photos">Fotoğraflar</string>
+  <string name="Tap3_Userinfo_PhotosSelected">Seçilmiş(%1$s/%2$s)</string>
   <string name="Tap3_Userinfo_UsePhoto">Kullanım Foto</string>
   <string name="Tap3_logout_tips">Çıkışı onaylıyor musunuz?</string>
   <string name="Tap3_nickname_used">Kullanıldı</string>
@@ -786,7 +831,7 @@
   <string name="connecting_ap">Bağlanılıyor&#8230;</string>
   <string name="contacts_auth">İrtibatlar</string>
   <string name="copy">Kopyala</string>
-  <string name="copyrightEn">Copyright ©2005&#8211;2016 Cylan.Tüm hakları saklıdır.</string>
+  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">Wi&#8211;Fi</string>
   <string name="dialog_callto_info">%s\n bir telefon numarası olabilir, Yapabilecekleriniz:</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
@@ -795,7 +840,8 @@
   <string name="getting">Elde ediliyor&#8230;</string>
   <string name="has_copy">Çoğaltılmış</string>
   <string name="has_not_sdcard">Mikro SD kartı bulamadık</string>
-  <string name="help_url">http://www.jfgou.com/help/en.html</string>
+  <string name="help_url">https://yf.jfgou.com:8081/help/tr.html</string>
+  <string name="help_url_Doby">https://yf.jfgou.com:8081/help/en_doby.html</string>
   <string name="isStorageLow">SD kartınızda yeterli yer yok</string>
   <string name="is_connecting_video">Bağlanılıyor</string>
   <string name="is_creating">Ekleniyor</string>
@@ -809,7 +855,7 @@
   <string name="rename">Adı düzenle</string>
   <string name="service_phonenum">+90 216 5614747</string>
   <string name="set_failed">Kurulum başarısız</string>
-  <string name="setwifi_check">%s ye bağlanmak için lütfen telefonunuzu kurunuz</string>
+  <string name="setwifi_check">\"%s\" ye bağlanmak için lütfen telefonunuzu kurunuz</string>
   <string name="share_content">Bu UYG çok iyi, bunu çok sevdim~</string>
   <string name="show_web">www.cleverdog.com.cn</string>
   <string name="someone_call">Birisi arıyor</string>
