--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -27,6 +27,8 @@
   <string name="AT_HOME">At Home</string>
   <string name="AUDIBLE_ALERT">Chọn Báo âm thanh để thực hiện khi phát hiện chuyển động</string>
   <string name="Added_successfully">Hãy cột thành công</string>
+  <string name="Apr">Apr.</string>
+  <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
   <string name="BARKING">Chó sủa</string>
   <string name="BATTERY_LEVEL">Pin sử dụng được</string>
@@ -129,15 +131,16 @@
   <string name="DOOR_SLIDE_TIP">Kéo để trả lời</string>
   <string name="DOOR_STOPPED">Ngắt kết nối, hãy làm lại</string>
   <string name="DOOR_TALK">Loa</string>
-  <string name="TODAY">Hôm nay</string>
-  <string name="DOOR_UNBIND">Đã xoá thiết bị</string>
+  <string name="DOOR_TODAY">Hôm nay</string>
   <string name="DOOR_UNCALL">nhỡ</string>
   <string name="DOOR_VOICE">Giọng nói</string>
   <string name="DOOR_WIFI_HINT">Trạng thái đèn LED</string>
+  <string name="DailyGreatTips_Full">số lượng các Daily Great Bộ sưu tập đã đạt đến mức giới hạn trên 50, đi xóa bỏ?</string>
+  <string name="Dec">Dec.</string>
   <string name="EDIT_IMAGE">Sửa</string>
   <string name="EDIT_THEME">Sửa</string>
   <string name="EFAMILY_BIND_SUCC">Thêm thành công</string>
-  <string name="ANSWER">Trả lời</string>
+  <string name="EFAMILY_CALL_ANSWER">Trả lời</string>
   <string name="EFAMILY_CALL_BUSY">Bận</string>
   <string name="EFAMILY_CALL_CANCEL">Huỷ</string>
   <string name="EFAMILY_CALL_DURATION">Thời hạn</string>
@@ -147,6 +150,7 @@
   <string name="EFAMILY_CANCEL_RECORD">Di chuyển lên để huỷ</string>
   <string name="EFAMILY_CANCEL_SEND">Bỏ ra để huỷ</string>
   <string name="EFAMILY_CLEAR_MSGLIST">Xoá danh sách tin nhắn</string>
+  <string name="EFAMILY_IGNORE">Bỏ qua</string>
   <string name="EFAMILY_INVALID_DEVICE">Không có mã QR</string>
   <string name="EFAMILY_LOOK">Xem</string>
   <string name="EFAMILY_MENU_PHOTO">Hình ảnh báo động</string>
@@ -197,12 +201,15 @@
   <string name="FRI_1">Thứ sáu</string>
   <string name="FRI_2">Sáu</string>
   <string name="FROME">Từ</string>
+  <string name="Feb">Feb.</string>
   <string name="GENERAL">Thông thường</string>
   <string name="GET_CODE">Nhận</string>
   <string name="GIVE_UP">Thoát</string>
   <string name="GLOBAL_NO_CONTENTS">Không có nội dung</string>
   <string name="GLOBAL_NO_NETWORK">Chưa kết nối</string>
   <string name="GUIDE_INFO">Kéo qua, \n xem nhiều hơn</string>
+  <string name="GetCode_FrequentlyTips">Quá thường xuyên hoạt động, xin vui lòng thử lại sau 10 phút.</string>
+  <string name="GetWifiList_FaiTips">1.Cho phép ứng dụng nhận \"Location\" phép \n 2.Quay \"GPS\" trên.</string>
   <string name="HOME">Home</string>
   <string name="HOUR">H</string>
   <string name="HOURS">24 giờ</string>
@@ -218,6 +225,9 @@
   <string name="Item_LoadFail">Lỗi khi tải</string>
   <string name="Item_NoContents">Không có nội dung</string>
   <string name="JUST_NOW">Bây giờ</string>
+  <string name="Jan">Jan.</string>
+  <string name="Jul">Jul.</string>
+  <string name="Jun">Jun.</string>
   <string name="LARGER_IMAGE">Xem ảnh kích thước lớn</string>
   <string name="LAST_UPDATE">Lận cập nhật cuối</string>
   <string name="LED">Đèn báo thiết bị</string>
@@ -273,7 +283,6 @@
   <string name="MSG_SHARE">Chia sẻ cho %s</string>
   <string name="MSG_SYSTEM_UPGRADE">Nâng cấp thành công hệ thống V%s</string>
   <string name="MSG_UNBIND">Thiết bị đã xoá</string>
-  <string name="MSG_UNBIND_INFO">Thiết bị đã bị xoá</string>
   <string name="MSG_UNSHARE">Huỷ chia sẻ cho %s</string>
   <string name="MSG_VIDEO">Video</string>
   <string name="MSG_WARNING">Khám phá mới</string>
@@ -281,6 +290,8 @@
   <string name="MSG_WARN_ON">Bạn đã bật phát hiện chuyển động. Thiết bị sẽ thông báo cho bạn khi có sự kiện</string>
   <string name="MUTE">Tắt tiếng</string>
   <string name="MY_HOME">My Home</string>
+  <string name="Mar">Mar.</string>
+  <string name="May">May.</string>
   <string name="NAME">Tên</string>
   <string name="NETWORK">Mạng</string>
   <string name="NETWORK_1">Di động</string>
@@ -304,6 +315,8 @@
   <string name="NO_NETWORK_DOOR">Chưa kết nối mạng</string>
   <string name="NO_SDCARD">Không có thẻ Micro SD</string>
   <string name="NO_SET">Chưa xác định</string>
+  <string name="NoNetworkTips">Không có kết nối mạng</string>
+  <string name="Nov">Nov.</string>
   <string name="OFF">Tắt</string>
   <string name="OFFLINE_ERR">Thiết bị Offline</string>
   <string name="OFFLINE_ERR_1">Chưa kết nối Internet</string>
@@ -316,6 +329,7 @@
   <string name="OTHERS_LOOKING">Có người đang xem trực tiếp</string>
   <string name="OTHER_TIME">Khác</string>
   <string name="OUT_OF_HOME">Out of Home</string>
+  <string name="Oct">Oct.</string>
   <string name="PASSWORD">Mật khẩu</string>
   <string name="PASSWORD_BIT">Mật khẩu mới</string>
   <string name="PASSWORD_LESSTHAN_SIX">Cần mật khẩu có trên 6 ký tự</string>
@@ -490,6 +504,8 @@
   <string name="Sdcard_AvailableCapacity">có sẵn</string>
   <string name="Sdcard_TotalCapacity">Tổng số</string>
   <string name="Search">Tìm kiếm</string>
+  <string name="Sep">Sep.</string>
+  <string name="ShareTo">Share to %s</string>
   <string name="Slogan">Homesick, Use Clever Dog</string>
   <string name="Slogan_Zhongxing">Smart Home, for better life</string>
   <string name="TAKE_PHOTO">Chụp ảnh</string>
@@ -510,15 +526,24 @@
   <string name="TUE_1">Thứ ba</string>
   <string name="TUE_2">Ba</string>
   <string name="TURN_ON_PROTECTION">Khi bật chế độ bảo vệ, tính năng phát hiện chuyển động và cảnh báo sẽ tự bật</string>
+  <string name="Tap0_AlreadyEmailed">Đã gửi email đến</string>
   <string name="Tap0_Authorizationfailed">Lỗi xác thực, hãy thử lại</string>
   <string name="Tap0_BindEmail">Gắn với Email</string>
   <string name="Tap0_BindPhoneNo">Gắn với số điện thoại</string>
   <string name="Tap0_BindTips">Gắn để đăng nhập hoặc khôi phục mật khẩu</string>
+  <string name="Tap0_Click_ActivateAccount">xin vui lòng nhấp vào liên kết để kích hoạt tài khoản của bạn.</string>
+  <string name="Tap0_Click_ResetPassword">hãy nhấn vào liên kết để tạo lại mật khẩu</string>
+  <string name="Tap0_Login_NoInstalled">Chưa cài %s</string>
   <string name="Tap0_Register_VerificationCode">Nhập mã xác nhận</string>
   <string name="Tap0_WelcomeTourist">Hãy xem</string>
   <string name="Tap0_enterphoneoremail">Nhập vào địa chỉ email hoặc số điện thoại</string>
   <string name="Tap0_invaildcode">Mã không hiện hữu</string>
   <string name="Tap0_register">Đăng ký</string>
+  <string name="Tap0_register_EmailVerification">xác minh qua email</string>
+  <string name="Tap0_register_GoToLogin">Đăng nhập</string>
+  <string name="Tap0_register_SendEmail">Gửi lại</string>
+  <string name="Tap0_register_SendEmailTips">Email đã được gửi</string>
+  <string name="Tap0_register_VerificationTips">Mail kích hoạt đã được gửi đến %s, xin vui lòng nhấp vào liên kết để kích hoạt tài khoản của bạn.</string>
   <string name="Tap0_wrongcode">Lỗi</string>
   <string name="Tap1_AddDeviceTips">Nhấn\"+\"để thêm thiết bị</string>
   <string name="Tap1_AddDevice_CameraTips">Chờ cho chỉ số nhấp nháy màu xanh lam</string>
@@ -551,12 +576,12 @@
   <string name="Tap1_CameraFun_Timelapse_End_Tips">Chưa đến thời gian kết thúc, bạn muốn dừng ghi?</string>
   <string name="Tap1_CameraFun_Timelapse_Filming">Đang chụp</string>
   <string name="Tap1_CameraFun_Timelapse_GoClose">Để tắt</string>
-  <string name="Tap1_CameraFun_Timelapse_GoWatch">Hãy nhìn xem</string>
+  <string name="Tap1_CameraFun_Timelapse_GoWatch">Xem</string>
   <string name="Tap1_CameraFun_Timelapse_Interval">Khoảng chờ</string>
   <string name="Tap1_CameraFun_Timelapse_NotStart">Đang đến</string>
   <string name="Tap1_CameraFun_Timelapse_OnTips">Time&#8211;lapse sẽ tự động tắt khi chụp xong và lưu vào\"Daily Great\"</string>
   <string name="Tap1_CameraFun_Timelapse_RecordTime">Thời gian chụp</string>
-  <string name="Tap1_CameraFun_Timelapse_Setting">Chụp thêm 1 hình</string>
+  <string name="Tap1_CameraFun_Timelapse_Setting">Bắn súng</string>
   <string name="Tap1_CameraFun_Timelapse_StandbyTips">Bắt đầu time&#8211;lapse trước khi đóng Standby</string>
   <string name="Tap1_CameraFun_Timelapse_Start">Bắt đầu bây giờ</string>
   <string name="Tap1_CameraFun_Timelapse_StartTime">Thời gian bắt đầu</string>
@@ -580,9 +605,11 @@
   <string name="Tap1_Camera_NoSDCardTips">Không phát hiện thẻ SD</string>
   <string name="Tap1_Camera_Overlook">Bỏ qua</string>
   <string name="Tap1_Camera_OverlookTips">Xem với góc nhìn ra cần đặt máy ảnh lên cao</string>
+  <string name="Tap1_Camera_OverlookTips_View">Bỏ qua:Xem với góc nhìn ra cần đặt máy ảnh lên cao</string>
   <string name="Tap1_Camera_Playback">Ghi hình xoay tròn</string>
   <string name="Tap1_Camera_Record_EndTips">sự kết thúc</string>
   <string name="Tap1_Camera_SetProtectionTips">Set the Protection</string>
+  <string name="Tap1_Camera_SpaceUsage">Sử dụng không gian(%1$s/%2$s)</string>
   <string name="Tap1_Camera_Video">Video</string>
   <string name="Tap1_Camera_VideoLive">Live</string>
   <string name="Tap1_Camera_Video_DormantTips">Đang chờ, nhấn để tắt</string>
@@ -590,17 +617,29 @@
   <string name="Tap1_Camera_Video_Standby">Đang chờ</string>
   <string name="Tap1_Camera_Video_Standby_OffTips">Nhấn để tắt</string>
   <string name="Tap1_Camera_ViewAngle">View angle</string>
+  <string name="Tap1_CurrentVersion">Current version</string>
   <string name="Tap1_Device_NoConnection">No network connection,click Refresh</string>
   <string name="Tap1_Device_UpgradeTips">Tìm firmware mới của thiết bị, cập nhật hay không?</string>
   <string name="Tap1_DoorFun_VoiceTips">Âm thanh phát ra từ thiết bị nhận</string>
   <string name="Tap1_DoorFun_Waitting">Đang chờ&#8230;</string>
+  <string name="Tap1_DownloadFirmwareFai">Download firmware failed</string>
+  <string name="Tap1_DownloadFirmwareTips">Tải về sẽ bắt đầu trong thời gian ngắn,hãy đảm bảo rằng điện thoại di động và các thiết bị đang kết nối với WIFI cùng</string>
+  <string name="Tap1_FirmwareDownloading">Downloading(%s)</string>
+  <string name="Tap1_FirmwareUpdate">Cập nhật firmware</string>
+  <string name="Tap1_FirmwareUpdateFai">Update failed</string>
+  <string name="Tap1_FirmwareUpdateSuc">Update successfully</string>
+  <string name="Tap1_FirmwareUpdating">Đang cập nhật(%s)</string>
+  <string name="Tap1_Firmware_DataTips">lượng tiêu thụ dữ liệu sẽ được tạo ra nếu đi về mà không cần kết nối WIFI,tiếp tục không?</string>
   <string name="Tap1_Index_DayGreetings">Ngạc nhiên nhỏ mỗi ngày</string>
   <string name="Tap1_Index_NightGreetings">Hãy khởi động lại và chờ</string>
   <string name="Tap1_Index_NoDevice">Không có thiết bị</string>
   <string name="Tap1_Index_Tips_Newvisitor">khách truy cập mới</string>
   <string name="Tap1_Index_Tips_Newvoice">tin nhắn thoại mới</string>
+  <string name="Tap1_LatestFirmwareTips">Đây là phiên bản mới nhất</string>
+  <string name="Tap1_LatestVersion">Latest version</string>
   <string name="Tap1_Magnetism_ClearRecord">Dọn bản ghi</string>
-  <string name="Tap1_Magnetism_Setting_Notify">Thông báo cho tôi khi nó mở / đóng</string>
+  <string name="Tap1_Magnetism_Setting_Notify">Thông báo cho tôi khi nó mở/đóng</string>
+  <string name="Tap1_NewFirmware">Fimware mới</string>
   <string name="Tap1_NoMessages">Không có tin nhắn</string>
   <string name="Tap1_SelectDevice">Chọn thiết bị để chia sẻ</string>
   <string name="Tap1_Setting_Cid">CID con số</string>
@@ -608,24 +647,27 @@
   <string name="Tap1_Tipsforautostart">Hãy cho phép chương trình tự khởi động để nhận tin nhắn từ camera hoặc chuông cửa</string>
   <string name="Tap1_Tipsforclearrecents">Xoá tất cả thông tin gần đây?</string>
   <string name="Tap1_TitleName">Nhà</string>
-  <string name="Tap1_Tosetup">Để cài đặt</string>
+  <string name="Tap1_Tosetup">Thiết lập</string>
+  <string name="Tap1_Update">cập nhật</string>
   <string name="Tap1_device_deleted">Thiết bị đã bị xoá</string>
   <string name="Tap1_iHome_Associate">Kết hợp</string>
   <string name="Tap1_iHome_Associated">Associated</string>
-  <string name="Tap1_iHome_CallDuration">Thời gian gọi:%s</string>
+  <string name="Tap1_iHome_CallDuration">Thời gian gọi:%d</string>
   <string name="Tap1_iHome_ClearRecord">Dọn bản ghi</string>
   <string name="Tap1_iHome_NotAssociated">Not Associated</string>
   <string name="Tap1_iHome_disassociate">Huỷ kết hợp</string>
   <string name="Tap1_shareDevice_canceledshare">Thiết bị này đã bị huỷ chia sẻ</string>
   <string name="Tap1_share_tips">Bạn được mời kết bạn và nhấn %s để tải APP Cleverdog</string>
+  <string name="Tap1a_DownloadInstall">Tải về và install(%s)</string>
   <string name="Tap2_Index_DemoVideo">Demo video</string>
   <string name="Tap2_Index_Greetings">Lưu hàng ngày</string>
   <string name="Tap2_Index_No3GCameraTips">Chỉ hỗ trợ 3G camera</string>
   <string name="Tap2_Index_OpenTimelapse">Để bắt đầu</string>
   <string name="Tap2_Index_Open_NoDevice">Để bắt đầu chức năng này cần gắn thiết bị, bạn muốn thực hiện?</string>
   <string name="Tap2_Index_Open_NoDeviceOption">Có</string>
-  <string name="Tap2_Share_Moments">Vòng tròn bạn bè Wechat</string>
-  <string name="Tap2_Share_Wechat">Bạn bè Wechat</string>
+  <string name="Tap2_NoPermissions_FailedDownloadTips">Không thể có được quyền truy cập thẻ SD.Tải hủy</string>
+  <string name="Tap2_Share_Moments">Moments</string>
+  <string name="Tap2_Share_Wechat">Wechat</string>
   <string name="Tap2_Timelapse_Alarmimages">Hình ảnh báo động</string>
   <string name="Tap2_Timelapse_fail">Video time&#8211;lapse không thể tạo được do mất kết nối</string>
   <string name="Tap2_Timelapse_screenshot">Chụp trực tuyến</string>
@@ -644,8 +686,9 @@
   <string name="Tap3_Feedback_AutoTips">Rất vui lòng nhận góp ý và đề nghị</string>
   <string name="Tap3_Feedback_Clear">Dọn dẹp</string>
   <string name="Tap3_Feedback_ClearTips">Rõ ràng thông điệp?</string>
+  <string name="Tap3_Feedback_Resend">Send again?</string>
   <string name="Tap3_Feedback_TextFail">Không ít hơn 10 ký tự</string>
-  <string name="Tap3_Feedback_TextTips">Hãy mô tả vấn đề, bình luận hay đề nghị chi tiết</string>
+  <string name="Tap3_Feedback_TextTips">Vui lòng mô tả vấn đề của bạn</string>
   <string name="Tap3_Friends">Bạn bè</string>
   <string name="Tap3_FriendsAdd">Thêm bạn bè</string>
   <string name="Tap3_FriendsAdd_Agree">Đồng ý</string>
@@ -686,6 +729,7 @@
   <string name="Tap3_LogIn">Đăng nhập</string>
   <string name="Tap3_MessageCancel">bị hủy bỏ</string>
   <string name="Tap3_MyQRCode">My QR code</string>
+  <string name="Tap3_NoPermissions_FailedViewImages">Ứng dụng đòi hỏi sự cho phép lưu trữ để xem hình ảnh</string>
   <string name="Tap3_SavePic">lưu bức ảnh</string>
   <string name="Tap3_Setting_taptoload">Nhấn để tải lại</string>
   <string name="Tap3_ShareDevice">Chia sẻ thiết bị</string>
@@ -700,7 +744,7 @@
   <string name="Tap3_ShareDevice_ExceedTips">Chia sẻ tối đa 5 người</string>
   <string name="Tap3_ShareDevice_FailTips">Không thể chia sẻ</string>
   <string name="Tap3_ShareDevice_Friends">Chia sẻ với bạn bè</string>
-  <string name="Tap3_ShareDevice_Friends_FailTips">%s Người dùng không chia sẻ</string>
+  <string name="Tap3_ShareDevice_Friends_FailTips">%d Người dùng không chia sẻ</string>
   <string name="Tap3_ShareDevice_NoDevice">Không có thiết bị</string>
   <string name="Tap3_ShareDevice_NoShare">Không được chia sẻ</string>
   <string name="Tap3_ShareDevice_NoneFriends">không ai</string>
@@ -709,7 +753,7 @@
   <string name="Tap3_ShareDevice_SuccessTips">Chia se thành công</string>
   <string name="Tap3_ShareDevice_Tips">Thiết bị này không thể được chia sẻ với bất kỳ người dùng hơn</string>
   <string name="Tap3_ShareDevice_ToContacts">Chia sẻ với Liên</string>
-  <string name="Tap3_TitleName">Tôi</string>
+  <string name="Tap3_TitleName">Mìn</string>
   <string name="Tap3_Uploading">Uploading &#8230;</string>
   <string name="Tap3_UploadingComplete">Upload complete</string>
   <string name="Tap3_UploadingFailed">Upload failed</string>
@@ -719,6 +763,7 @@
   <string name="Tap3_Userinfo_CameraRoll">Camera roll</string>
   <string name="Tap3_Userinfo_NoCamera">Máy ảnh không thể sử dụng</string>
   <string name="Tap3_Userinfo_Photos">Photos</string>
+  <string name="Tap3_Userinfo_PhotosSelected">Đã chọn(%1$s/%2$s)</string>
   <string name="Tap3_Userinfo_UsePhoto">sử dụng hình ảnh</string>
   <string name="Tap3_logout_tips">Bạn muốn thoát?</string>
   <string name="Tap3_nickname_used">Đã dùng</string>
@@ -786,7 +831,7 @@
   <string name="connecting_ap">Đang kết nối&#8230;</string>
   <string name="contacts_auth">Liên hệ</string>
   <string name="copy">Sao chép</string>
-  <string name="copyrightEn">Bản quyền @2015&#8211;2016 Cleverdog</string>
+  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">Wi&#8211;Fi</string>
   <string name="dialog_callto_info">%s\nlà một số điện thoại, bạn có thể:</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
@@ -795,7 +840,8 @@
   <string name="getting">Đang lấy&#8230;</string>
   <string name="has_copy">Đã nhân bản</string>
   <string name="has_not_sdcard">Không tìm thấy SD card</string>
-  <string name="help_url">http://www.jfgou.com/help/en.html</string>
+  <string name="help_url">https://yf.jfgou.com:8081/help/vn.html</string>
+  <string name="help_url_Doby">https://yf.jfgou.com:8081/help/en_doby.html</string>
   <string name="isStorageLow">Thẻ SD không còn đủ dung lượng</string>
   <string name="is_connecting_video">Đang kết nối</string>
   <string name="is_creating">Đang thêm vào&#8230;</string>
@@ -809,7 +855,7 @@
   <string name="rename">Sửa tên</string>
   <string name="service_phonenum">84822101327</string>
   <string name="set_failed">Lỗi cài đặt</string>
-  <string name="setwifi_check">Hãy cho điện thoại kết nối với %s</string>
+  <string name="setwifi_check">Hãy cho điện thoại kết nối với \"%s\"</string>
   <string name="share_content">APP này tốt, tôi thích nó</string>
   <string name="show_web">www.cleverdog.com.cn</string>
   <string name="someone_call">Có người gọi</string>
