--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -7,10 +7,10 @@
   <string name="ACCOUNT_1">我的帳號</string>
   <string name="ACCOUNT_ERR">請輸入有效的帳號</string>
   <string name="ACCOUNT_ERR_1">請輸入有效的帳號</string>
-  <string name="ACCOUNT_ERR_3">請輸入帳號綁定的手機號碼或電子郵件</string>
+  <string name="ACCOUNT_ERR_3">請輸入帳號綁定的電子郵件</string>
   <string name="ACCOUNT_ID">帳號ID：%s</string>
   <string name="ACCOUNT_QQ">QQ帳號</string>
-  <string name="ACCOUNT_XL">新浪微博帳號</string>
+  <string name="ACCOUNT_XL">微博帳號</string>
   <string name="ADD_EQUIPMENT">帶您進入全新的智能家居時代\n快來設備體驗吧！</string>
   <string name="ADD_ERR_INFO">無網路連接\n請點擊“返回”主頁查看設備狀態</string>
   <string name="ADD_FAILED">新增失敗，請重試</string>
@@ -27,6 +27,8 @@
   <string name="AT_HOME">回家模式</string>
   <string name="AUDIBLE_ALERT">偵測到異常時，設備將播放聲音</string>
   <string name="Added_successfully">綁定成功</string>
+  <string name="Apr">Apr.</string>
+  <string name="Aug">Aug.</string>
   <string name="BACK">返回</string>
   <string name="BARKING">汪汪聲</string>
   <string name="BATTERY_LEVEL">電池電量</string>
@@ -103,7 +105,7 @@
   <string name="DEViCE_NAME">請輸入設備名稱</string>
   <string name="DIRECTION_180">反轉（旋轉180°）</string>
   <string name="DIRECTION_NORMAL">默認（正常）</string>
-  <string name="DOG_CAMERA_NAME">攝像機</string>
+  <string name="DOG_CAMERA_NAME">智能攝像機</string>
   <string name="DOG_MAGNETISM_NAME">門磁</string>
   <string name="DOOR_ANSWERING">連接中&#8230;</string>
   <string name="DOOR_BELL">我家門鈴</string>
@@ -129,15 +131,16 @@
   <string name="DOOR_SLIDE_TIP">右滑通話</string>
   <string name="DOOR_STOPPED">切斷連線</string>
   <string name="DOOR_TALK">對講</string>
-  <string name="TODAY">今天</string>
-  <string name="DOOR_UNBIND">設備已刪除</string>
+  <string name="DOOR_TODAY">今天</string>
   <string name="DOOR_UNCALL">未接聽</string>
   <string name="DOOR_VOICE">聲音</string>
   <string name="DOOR_WIFI_HINT">設備指示燈狀態說明</string>
+  <string name="DailyGreatTips_Full">每日精彩收藏數量已達50條上限，是否前去刪除？</string>
+  <string name="Dec">Dec.</string>
   <string name="EDIT_IMAGE">圖片編輯</string>
   <string name="EDIT_THEME">編輯</string>
   <string name="EFAMILY_BIND_SUCC">新增成功</string>
-  <string name="ANSWER">接聽</string>
+  <string name="EFAMILY_CALL_ANSWER">接聽</string>
   <string name="EFAMILY_CALL_BUSY">對方忙碌</string>
   <string name="EFAMILY_CALL_CANCEL">呼叫已取消</string>
   <string name="EFAMILY_CALL_DURATION">通話</string>
@@ -147,7 +150,7 @@
   <string name="EFAMILY_CANCEL_RECORD">手指上滑，取消發送</string>
   <string name="EFAMILY_CANCEL_SEND">鬆開, 取消發送</string>
   <string name="EFAMILY_CLEAR_MSGLIST">清空訊息列表</string>
-  <string name="IGNORE">忽略</string>
+  <string name="EFAMILY_IGNORE">忽略</string>
   <string name="EFAMILY_INVALID_DEVICE">無效的二維碼</string>
   <string name="EFAMILY_LOOK">立即查看</string>
   <string name="EFAMILY_MENU_PHOTO">分享照片</string>
@@ -198,16 +201,20 @@
   <string name="FRI_1">每週五</string>
   <string name="FRI_2">五</string>
   <string name="FROME">開始時間</string>
+  <string name="Feb">Feb.</string>
   <string name="GENERAL">基本</string>
   <string name="GET_CODE">獲取驗證碼</string>
   <string name="GIVE_UP">放棄</string>
   <string name="GLOBAL_NO_CONTENTS">暫無記錄</string>
   <string name="GLOBAL_NO_NETWORK">連接失敗，請檢查網路</string>
   <string name="GUIDE_INFO">滑一滑，顯示更多內容</string>
+  <string name="GetCode_FrequentlyTips">操作過於頻繁，請10分鐘後重試</string>
+  <string name="GetWifiList_FaiTips">1.允許客戶端獲取“位置信息”權限 \n 2.打開“GPS”開關</string>
   <string name="HOME">主頁</string>
   <string name="HOUR">時</string>
   <string name="HOURS">全天提示</string>
   <string name="HZ_VOTE">支援110V電壓</string>
+  <string name="IGNORE">忽略未讀</string>
   <string name="IMAGE_ERR">圖片太大，請重新選擇</string>
   <string name="INVALID_ACCOUNT">此帳號尚未註冊</string>
   <string name="INVALID_CODE">驗證碼已過期</string>
@@ -218,6 +225,9 @@
   <string name="Item_LoadFail">加載失敗</string>
   <string name="Item_NoContents">無內容</string>
   <string name="JUST_NOW">剛剛</string>
+  <string name="Jan">Jan.</string>
+  <string name="Jul">Jul.</string>
+  <string name="Jun">Jun.</string>
   <string name="LARGER_IMAGE">點擊查看大圖</string>
   <string name="LAST_UPDATE">上次更新</string>
   <string name="LED">設備指示燈</string>
@@ -273,7 +283,6 @@
   <string name="MSG_SHARE">已分享給%s</string>
   <string name="MSG_SYSTEM_UPGRADE">太酷了！系統升級到V%s</string>
   <string name="MSG_UNBIND">設備已被刪除</string>
-  <string name="MSG_UNBIND_INFO">設備已被刪除</string>
   <string name="MSG_UNSHARE">已取消對%s用戶的分享</string>
   <string name="MSG_VIDEO">看直播</string>
   <string name="MSG_WARNING">有新的發現</string>
@@ -281,6 +290,8 @@
   <string name="MSG_WARN_ON"></string>
   <string name="MUTE">靜音</string>
   <string name="MY_HOME">家</string>
+  <string name="Mar">Mar.</string>
+  <string name="May">May.</string>
   <string name="NAME">名稱</string>
   <string name="NETWORK">網路</string>
   <string name="NETWORK_1">移動網路</string>
@@ -304,6 +315,8 @@
   <string name="NO_NETWORK_DOOR">網路連接失敗</string>
   <string name="NO_SDCARD">未檢測到Micro SD卡</string>
   <string name="NO_SET">未設定</string>
+  <string name="NoNetworkTips">當前網路不可用</string>
+  <string name="Nov">Nov.</string>
   <string name="OFF">未啟用</string>
   <string name="OFFLINE_ERR">設備離線</string>
   <string name="OFFLINE_ERR_1">無網路連接</string>
@@ -316,6 +329,7 @@
   <string name="OTHERS_LOOKING">其他用戶正在查看</string>
   <string name="OTHER_TIME">其他</string>
   <string name="OUT_OF_HOME">離家模式</string>
+  <string name="Oct">Oct.</string>
   <string name="PASSWORD">密碼</string>
   <string name="PASSWORD_BIT">設置新密碼</string>
   <string name="PASSWORD_LESSTHAN_SIX">請輸入6~12位密碼</string>
@@ -490,6 +504,8 @@
   <string name="Sdcard_AvailableCapacity">可用</string>
   <string name="Sdcard_TotalCapacity">總容量</string>
   <string name="Search">搜索</string>
+  <string name="Sep">Sep.</string>
+  <string name="ShareTo">Share to %s</string>
   <string name="Slogan">Homesick, Use Clever Dog</string>
   <string name="Slogan_Zhongxing">美好生活 智能家居</string>
   <string name="TAKE_PHOTO">拍照</string>
@@ -510,15 +526,24 @@
   <string name="TUE_1">每週二</string>
   <string name="TUE_2">二</string>
   <string name="TURN_ON_PROTECTION">開啟後，警示時間段內偵測到異常，位移偵測將自動開啟，並發送訊息通知</string>
+  <string name="Tap0_AlreadyEmailed">已發送郵件到</string>
   <string name="Tap0_Authorizationfailed">授權失敗，請稍後再試</string>
   <string name="Tap0_BindEmail">設定電子郵件</string>
   <string name="Tap0_BindPhoneNo">設定電話號碼</string>
   <string name="Tap0_BindTips">設定完成後可用於登錄與找回密碼</string>
+  <string name="Tap0_Click_ActivateAccount">請點擊郵件內的鏈接激活賬號</string>
+  <string name="Tap0_Click_ResetPassword">請點擊電子郵件內的連結重設密碼</string>
+  <string name="Tap0_Login_NoInstalled">沒有安裝%s</string>
   <string name="Tap0_Register_VerificationCode">輸入驗證碼</string>
   <string name="Tap0_WelcomeTourist">先去看看</string>
   <string name="Tap0_enterphoneoremail">請輸入電話號碼或電子郵件</string>
   <string name="Tap0_invaildcode">無效的驗證碼</string>
   <string name="Tap0_register">註冊</string>
+  <string name="Tap0_register_EmailVerification">郵箱驗證</string>
+  <string name="Tap0_register_GoToLogin">去登錄</string>
+  <string name="Tap0_register_SendEmail">再次發送驗證郵件</string>
+  <string name="Tap0_register_SendEmailTips">郵件已發送</string>
+  <string name="Tap0_register_VerificationTips">已發送郵件到%s，請點擊郵件內的鏈接激活賬號</string>
   <string name="Tap0_wrongcode">驗證碼不正確</string>
   <string name="Tap1_AddDeviceTips">點擊右上角“+”新增設備</string>
   <string name="Tap1_AddDevice_CameraTips">等待藍燈閃爍</string>
@@ -556,7 +581,7 @@
   <string name="Tap1_CameraFun_Timelapse_NotStart">即將開始</string>
   <string name="Tap1_CameraFun_Timelapse_OnTips">開啟“延時攝影”後，攝影機將間隔拍攝照片， 拍攝結束後將自動關閉此選項，並儲存到“每日精彩”</string>
   <string name="Tap1_CameraFun_Timelapse_RecordTime">拍攝時間</string>
-  <string name="Tap1_CameraFun_Timelapse_Setting">再拍一次</string>
+  <string name="Tap1_CameraFun_Timelapse_Setting">再拍一个</string>
   <string name="Tap1_CameraFun_Timelapse_StandbyTips">攝影機安全待機中，開啟延時攝影，需關閉安全待機模式</string>
   <string name="Tap1_CameraFun_Timelapse_Start">立即開啟</string>
   <string name="Tap1_CameraFun_Timelapse_StartTime">開始時間</string>
@@ -580,9 +605,11 @@
   <string name="Tap1_Camera_NoSDCardTips">未檢測到SD卡</string>
   <string name="Tap1_Camera_Overlook">俯視</string>
   <string name="Tap1_Camera_OverlookTips">以從上往下的視角查看，需要將攝像頭放置於高處</string>
+  <string name="Tap1_Camera_OverlookTips_View">俯視：以從上往下的視角查看 \n 需要將攝像頭放置於高處</string>
   <string name="Tap1_Camera_Playback">錄影</string>
   <string name="Tap1_Camera_Record_EndTips">當天錄像已播完</string>
   <string name="Tap1_Camera_SetProtectionTips">設置安全防護</string>
+  <string name="Tap1_Camera_SpaceUsage">空間使用情況(%1$s/%2$s)</string>
   <string name="Tap1_Camera_Video">視訊</string>
   <string name="Tap1_Camera_VideoLive">直播</string>
   <string name="Tap1_Camera_Video_DormantTips">已進入待機狀態，點擊前往關閉</string>
@@ -590,17 +617,29 @@
   <string name="Tap1_Camera_Video_Standby">已進入待機狀態</string>
   <string name="Tap1_Camera_Video_Standby_OffTips">點擊前往關閉</string>
   <string name="Tap1_Camera_ViewAngle">視角</string>
+  <string name="Tap1_CurrentVersion">當前版本</string>
   <string name="Tap1_Device_NoConnection">無網絡連接，請單擊刷新</string>
   <string name="Tap1_Device_UpgradeTips">發現設備新固件，是否升級？</string>
   <string name="Tap1_DoorFun_VoiceTips">聲音將通過聽筒播放</string>
   <string name="Tap1_DoorFun_Waitting">等待接聽</string>
+  <string name="Tap1_DownloadFirmwareFai">固件下載失敗</string>
+  <string name="Tap1_DownloadFirmwareTips">即將下載設備固件，升級設備固件時需保持客戶端與設備連接於同一網路</string>
+  <string name="Tap1_FirmwareDownloading">正在下載(%s)</string>
+  <string name="Tap1_FirmwareUpdate">固件更新</string>
+  <string name="Tap1_FirmwareUpdateFai">固件升級失敗</string>
+  <string name="Tap1_FirmwareUpdateSuc">固件升級成功</string>
+  <string name="Tap1_FirmwareUpdating">正在升級(%s)</string>
+  <string name="Tap1_Firmware_DataTips">當前使用非WiFi網路，繼續操作將會產生流量，是否繼續？</string>
   <string name="Tap1_Index_DayGreetings">每天都給自己一點小期待</string>
   <string name="Tap1_Index_NightGreetings">每一次的休息 總會帶來新的方向與未來</string>
   <string name="Tap1_Index_NoDevice">還沒有設備</string>
   <string name="Tap1_Index_Tips_Newvisitor">有客人來訪</string>
   <string name="Tap1_Index_Tips_Newvoice">有新語音留言</string>
+  <string name="Tap1_LatestFirmwareTips">已是最新固件</string>
+  <string name="Tap1_LatestVersion">最新版本</string>
   <string name="Tap1_Magnetism_ClearRecord">清空開關記錄</string>
   <string name="Tap1_Magnetism_Setting_Notify">開/關時通知我</string>
+  <string name="Tap1_NewFirmware">新固件</string>
   <string name="Tap1_NoMessages">無消息</string>
   <string name="Tap1_SelectDevice">選擇設備</string>
   <string name="Tap1_Setting_Cid">CID 編號</string>
@@ -609,23 +648,26 @@
   <string name="Tap1_Tipsforclearrecents">確認清空呼叫記錄？</string>
   <string name="Tap1_TitleName">首頁</string>
   <string name="Tap1_Tosetup">設定</string>
+  <string name="Tap1_Update">升級</string>
   <string name="Tap1_device_deleted">此設備已被刪除</string>
   <string name="Tap1_iHome_Associate">關聯</string>
   <string name="Tap1_iHome_Associated">已关联</string>
-  <string name="Tap1_iHome_CallDuration">通話時長：%s</string>
+  <string name="Tap1_iHome_CallDuration">通話時長：%d</string>
   <string name="Tap1_iHome_ClearRecord">清空消息記錄</string>
   <string name="Tap1_iHome_NotAssociated">未關聯</string>
   <string name="Tap1_iHome_disassociate">取消關聯</string>
   <string name="Tap1_shareDevice_canceledshare">此設備已取消分享</string>
   <string name="Tap1_share_tips">邀請你成為我的好友，點擊%s下載安裝【加菲狗客戶端】</string>
+  <string name="Tap1a_DownloadInstall">下載並安裝(%s)</string>
   <string name="Tap2_Index_DemoVideo">演示視頻</string>
   <string name="Tap2_Index_Greetings">每一天的生活，都值得被記錄</string>
   <string name="Tap2_Index_No3GCameraTips">僅支持3G攝像頭</string>
   <string name="Tap2_Index_OpenTimelapse">前往開啟</string>
   <string name="Tap2_Index_Open_NoDevice">啟動該功能需要先確認智能攝影機，是否現在就先確認？</string>
-  <string name="Tap2_Index_Open_NoDeviceOption">先確認</string>
-  <string name="Tap2_Share_Moments">分享到朋友圈</string>
-  <string name="Tap2_Share_Wechat">傳送給朋友</string>
+  <string name="Tap2_Index_Open_NoDeviceOption">去綁定</string>
+  <string name="Tap2_NoPermissions_FailedDownloadTips">獲取SD卡權限失敗,已取消下載</string>
+  <string name="Tap2_Share_Moments">朋友圈</string>
+  <string name="Tap2_Share_Wechat">微信好友</string>
   <string name="Tap2_Timelapse_Alarmimages">警報圖片</string>
   <string name="Tap2_Timelapse_fail">由於延時攝影過程中設備離線，無法生成視頻</string>
   <string name="Tap2_Timelapse_screenshot">螢幕快照</string>
@@ -644,8 +686,9 @@
   <string name="Tap3_Feedback_AutoTips">我們一直在聆聽，歡迎您提出寶貴的意見或建議</string>
   <string name="Tap3_Feedback_Clear">清空</string>
   <string name="Tap3_Feedback_ClearTips">清空消息？</string>
+  <string name="Tap3_Feedback_Resend">是否重新發送？</string>
   <string name="Tap3_Feedback_TextFail">輸入內容不能少於10個字</string>
-  <string name="Tap3_Feedback_TextTips">請詳細描述您遇到的問題、意見或建議</string>
+  <string name="Tap3_Feedback_TextTips">請詳細描述您遇到的問題</string>
   <string name="Tap3_Friends">親友</string>
   <string name="Tap3_FriendsAdd">新增親友</string>
   <string name="Tap3_FriendsAdd_Agree">同意</string>
@@ -686,6 +729,7 @@
   <string name="Tap3_LogIn">登錄</string>
   <string name="Tap3_MessageCancel">發送短信取消</string>
   <string name="Tap3_MyQRCode">我的QR碼</string>
+  <string name="Tap3_NoPermissions_FailedViewImages">需要獲取存儲權限才能查看圖像</string>
   <string name="Tap3_SavePic">保存圖片</string>
   <string name="Tap3_Setting_taptoload">輕觸重試加載</string>
   <string name="Tap3_ShareDevice">分享設備</string>
@@ -700,7 +744,7 @@
   <string name="Tap3_ShareDevice_ExceedTips">最多可分享給5位親友</string>
   <string name="Tap3_ShareDevice_FailTips">分享失敗</string>
   <string name="Tap3_ShareDevice_Friends">分享給親友</string>
-  <string name="Tap3_ShareDevice_Friends_FailTips">%s位用戶分享失敗</string>
+  <string name="Tap3_ShareDevice_Friends_FailTips">%d位用戶分享失敗</string>
   <string name="Tap3_ShareDevice_NoDevice">還沒有保存</string>
   <string name="Tap3_ShareDevice_NoShare">暫未分享</string>
   <string name="Tap3_ShareDevice_NoneFriends">暫無添加親友</string>
@@ -719,13 +763,14 @@
   <string name="Tap3_Userinfo_CameraRoll">相機膠片</string>
   <string name="Tap3_Userinfo_NoCamera">相機無法使用</string>
   <string name="Tap3_Userinfo_Photos">照片</string>
+  <string name="Tap3_Userinfo_PhotosSelected">已選(%1$s/%2$s)</string>
   <string name="Tap3_Userinfo_UsePhoto">使用照片</string>
   <string name="Tap3_logout_tips">是否確認退出？</string>
   <string name="Tap3_nickname_used">暱稱已被使用</string>
   <string name="Tips_DeleteFail">刪除失敗</string>
   <string name="Tips_Device_ConnectFail">連接設備失敗</string>
   <string name="Tips_Device_TimeoutRetry">連接超時，請重試</string>
-  <string name="Tips_SureDelete">確定刪除此好友?</string>
+  <string name="Tips_SureDelete">是否刪除？</string>
   <string name="UPDATE_DISCONNECT">設備無回應，請重試</string>
   <string name="UPDATE_FAIL">設備連接失敗，請重試</string>
   <string name="UPDATING_BUTTON">正在更新</string>
@@ -786,7 +831,7 @@
   <string name="connecting_ap">正在連接&#8230;</string>
   <string name="contacts_auth">通訊錄</string>
   <string name="copy">複製</string>
-  <string name="copyrightEn">Copyright © 2005&#8211;2016 CYLAN . All Rights Reserved</string>
+  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">Wi&#8211;Fi</string>
   <string name="dialog_callto_info">%s\n可能是一個電話號碼，你可以：</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
@@ -795,7 +840,8 @@
   <string name="getting">獲取中&#8230;</string>
   <string name="has_copy">已複製</string>
   <string name="has_not_sdcard">未發現Micro SD卡</string>
-  <string name="help_url">http://www.jfgou.com/help/zh&#8211;hk.html</string>
+  <string name="help_url">https://yf.jfgou.com:8081/help/zh&#8211;hk.html</string>
+  <string name="help_url_Doby">https://yf.jfgou.com:8081/help/en_doby.html</string>
   <string name="isStorageLow">Micro SD卡存儲空間不足，無法下載。</string>
   <string name="is_connecting_video">正在連接攝影機</string>
   <string name="is_creating">正在新增</string>
@@ -809,7 +855,7 @@
   <string name="rename">編輯名稱</string>
   <string name="service_phonenum">+86 400&#8211;716&#8211;3232</string>
   <string name="set_failed">設定失敗</string>
-  <string name="setwifi_check">請連接到%s網路，再進行配置</string>
+  <string name="setwifi_check">請設置手機連接到“%s”WiFi網路，再進行配置</string>
   <string name="share_content">最近我在用這款APP，配合一個攝像機可以隨時隨地看到家裏，非常好用！推薦你也試試</string>
   <string name="show_web">www.cleverdog.com.cn</string>
   <string name="someone_call">有朋友來訪</string>
