--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -818,7 +818,7 @@
   <string name="YOUR_FEEDBACK">每一位用戶的意見與建議都很重要</string>
   <string name="Yesterday">昨天</string>
   <string name="addvideo_searching">正在搜索&#8230;</string>
-  <string name="app_name">加菲狗</string>
+  <string name="app_name">Clever Dog</string>
   <string name="app_share">推薦給朋友</string>
   <string name="callto">呼叫</string>
   <string name="camera_auth">相機</string>
